--- a/lecture3-CN.ipynb
+++ b/lecture3-CN.ipynb
@@ -95,22 +95,22 @@
    "source": [
     "## 最小二乘法\n",
     "\n",
-    "给定 $n$ 个观测值 $\\left(y_{i},x_{i}\\right)_{i=1}^{n}$, 我们想用 $X$ 的某个线性组合 $Xb$ 尽量逼近 $Y$. 说到逼近，我们需要定义两个向量 $Y$ 和 $Xb$ 之间的距离。欧氏距离 $ \\Vert Y - Xb \\Vert_2 = \\sqrt{\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}}$ 是常用的定义。"
+    "给定 $n$ 个观测值 $\\left(y_{i},x_{i}\\right)_{i=1}^{n}$, 我们想利用 $X$ 的某个线性组合 $Xb$ 尽量逼近 $Y$. 说到逼近，我们需要定义两个向量 $Y$ 和 $Xb$ 之间的距离. 欧氏距离(Euclidean distance) $\\Vert Y - Xb \\Vert = \\sqrt{\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}}$ 是常用的距离定义. \n",
+    "定义一个目标函数\n",
+    "\n",
+    "$$\n",
+    "Q\\left(b\\right)=\\frac{1}{2n}\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}=\\frac{1}{2n}\\left(Y-Xb\\right)'\\left(Y-Xb\\right)=\\frac{1}{2n}\\left\\Vert Y-Xb\\right\\Vert ^{2}.\n",
+    "$$\n",
+    "\n",
+    "残差平方和 $\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}$ 是 $\\Vert Y - Xb \\Vert$ 的平方。因为平方 $(\\cdot)^2$ 在 $\\mathbb{R}^+$上是严格单调递增函数，所以对 $b$ 最小化 $Q(b)$ 等价于最小化欧氏距离. 系数 $\\frac{1}{2n}$ 与 $b$ 无关, 不影响该最优化问题的解.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "我们也可以从最小化残差平方和 $\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}$ 的角度来得到最小二乘法估计量, 这等价于最小化\n",
     "\n",
-    "$$\n",
-    "Q\\left(b\\right)=\\frac{1}{2n}\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}=\\frac{1}{2n}\\left(Y-Xb\\right)'\\left(Y-Xb\\right)=\\frac{1}{2n}\\left\\Vert Y-Xb\\right\\Vert ^{2}.\n",
-    "$$\n",
-    "\n",
-    "其中, 系数 $\\frac{1}{2n}$ 与 $b$ 无关, 不会影响该最小化问题的解. $\\left\\Vert \\cdot\\right\\Vert$ 是向量的欧几里得范数(Euclidean norm). \n",
-    "\n",
-    "$Q\\left(b\\right)$ 最小化的一阶条件是\n",
+    "最小化 $Q\\left(b\\right)$ 的一阶必要条件是\n",
     "\n",
     "$$\n",
     "\\frac{\\partial}{\\partial b}Q\\left(b\\right)=\\left[\\begin{array}{c}\n",
@@ -121,7 +121,17 @@
     "\\end{array}\\right]=-\\frac{1}{n}X'\\left(Y-Xb\\right)=0.\n",
     "$$\n",
     "\n",
-    "因此, 最小化 $Q\\left(b\\right)$ 的必要条件让我们得到了相同的估计值 $b=\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'y$. \n",
+    "对上式移项可得\n",
+    "\n",
+    "$$\n",
+    "(X'X)b = X'Y.\n",
+    "$$\n",
+    "\n",
+    "我们记该最优解 \n",
+    "\n",
+    "$$\n",
+    "\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'y.\n",
+    "$$ \n",
     "\n",
     "另外, 二阶条件\n",
     "\n",
