--- a/lecture3-CN.ipynb
+++ b/lecture3-CN.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "---\n",
     "\n",
-    "最小二乘法 (OLS) 是计量经济学中最基本的估计模型, 它简单透明, 易于理解. 了解最小二乘法, 有助于我们研究更复杂的线性估计方法. 此外, 许多非线性估计量在真实值附近与线性估计量的行为是类似的. 在本讲义中, 我们将从线性代数的运算讲起, 学习一系列的知识. \n",
+    "最小二乘法 (OLS) 是计量经济学中最基本的估计方法, 它简单透明, 易于理解. 了解最小二乘法, 有助于我们研究更复杂的线性估计方法. 此外, 许多非线性估计量在真实值附近与线性估计量的行为是类似的. 在本讲义中, 我们将从线性代数的运算讲起, 学习一系列的知识. \n",
     "\n",
     "\n",
     "套用Leopold Kronecker的名言 \"上帝创造了整数, 其他都是人的作品\", 我想说 \"高斯创造了最小二乘法, 其他都是应用研究者的作品\". 在科学界, 最小二乘法的受欢迎程度远远超出了人们的想象. 但要注意的是, 最小二乘法是一种纯统计学的方法, 或者说是一种监督式机器学习的方法, 因此它揭示的是相关关系, 而非因果关系. 相反, 经济理论假设因果关系的存在, 然后我们收集数据来检验理论或量化效果. \n"
@@ -95,14 +95,15 @@
    "source": [
     "## 最小二乘法\n",
     "\n",
-    "给定 $n$ 个观测值 $\\left(y_{i},x_{i}\\right)_{i=1}^{n}$, 我们想利用 $X$ 的某个线性组合 $Xb$ 尽量逼近 $Y$. 说到逼近，我们需要定义两个向量 $Y$ 和 $Xb$ 之间的距离. 欧氏距离(Euclidean distance) $\\Vert Y - Xb \\Vert = \\sqrt{\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}}$ 是常用的距离定义. \n",
+    "给定 $n$ 个观测值 $\\left(y_{i},x_{i}\\right)_{i=1}^{n}$, 我们想利用 $X$ 的某个线性组合 $Xb$ 尽量逼近 $Y$. 说到逼近，我们需要定义两个向量 $Y$ 和 $Xb$ 之间的距离. 欧几里得范数(Euclidean norm) $\\Vert Y - Xb \\Vert = \\sqrt{\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}}$ 是常用的测量向量长度的指标. \n",
     "定义一个目标函数\n",
     "\n",
     "$$\n",
     "Q\\left(b\\right)=\\frac{1}{2n}\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}=\\frac{1}{2n}\\left(Y-Xb\\right)'\\left(Y-Xb\\right)=\\frac{1}{2n}\\left\\Vert Y-Xb\\right\\Vert ^{2}.\n",
     "$$\n",
     "\n",
-    "残差平方和 $\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}$ 是 $\\Vert Y - Xb \\Vert$ 的平方。因为平方 $(\\cdot)^2$ 在 $\\mathbb{R}^+$上是严格单调递增函数，所以对 $b$ 最小化 $Q(b)$ 等价于最小化欧氏距离. 系数 $\\frac{1}{2n}$ 与 $b$ 无关, 不影响该最优化问题的解.\n"
+    "残差平方和 $\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}$ 是 $\\Vert Y - Xb \\Vert$ 的平方. \n",
+    "因为平方 $(\\cdot)^2$ 在 $\\mathbb{R}^+$上严格单调递增，所以用 $b$ 来最小化 $Q(b)$ 等价于最小化欧氏距离. 系数 $\\frac{1}{2n}$ 与 $b$ 无关, 不影响该最优化问题的解.\n"
    ]
   },
   {
@@ -127,6 +128,8 @@
     "(X'X)b = X'Y.\n",
     "$$\n",
     "\n",
+    "在最小二乘法的推导中, 我们假定 $X$ 中的 $K$ 列是*线性独立的*, 也就是说不存在 $K\\times1$ 的向量\n",
+    "$b\\ (b\\neq0_{K})$ 使得 $Xb=0_{n}$. 同时, 这也意味着 $n\\geq K$ , 并且 $X'X/n$ 可逆. \n",
     "我们记该最优解 \n",
     "\n",
     "$$\n",
@@ -153,11 +156,8 @@
    "source": [
     "```{prf:remark}\n",
     ":label: remark3\n",
-    "在最小二乘法的推导中, 我们假定 $X$ 中的 $K$ 列是*线性独立的*, 也就是说不存在 $K\\times1$ 的向量\n",
-    "$b\\ (b\\neq0_{K})$ 使得 $Xb=0_{n}$. 同时, 这也意味着 $n\\geq K$ , 并且 $X'X/n$ 是可逆矩阵. \n",
     "\n",
-    "然而线性独立的假设并不永远正确, 如果某些回归因子满足*完全共线性 (perfectly collinear)* , 就违反了线性独立的假设. \n",
-    "\n",
+    "如果某些回归因子满足*完全共线性 (perfectly collinear)* , 就违反了 $X'X/n$ 可逆的线性独立的假设. \n",
     "例如, 使用虚拟变量来表示分类变量并将所有这些类别放入回归模型中时, 通常计量经济学软件会自动检测并指出完全共线性问题. 然而, 难以察觉的是*不完全共线性 (nearly collinear)*, 即 $X'X/n$ 的最小特征值接近于0, 而不等于0. 我们将在渐进理论一章中讨论不完全共线性的后果. \n",
     "```"
    ]
@@ -166,8 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{prf:property}\n",
-    ":label: property1\n",
+    "### 线性代数性质\n",
     "\n",
     "下面列举一些与最小二乘法估计量有关的定义与性质. \n",
     "\n",
@@ -221,7 +220,7 @@
     "  \\end{array}\\right]$ , 第一行运算说明了\n",
     "  $\\sum_{i=1}^{n}\\widehat{e}_{i}=0$. \"$\\heartsuit$\" 代表与我们计算无关的值. )\n",
     "  \n",
-    " ```"
+    " <!-- ``` -->"
    ]
   },
   {
@@ -237,29 +236,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "我们还可以从几何学的角度来理解最小二乘法. \n",
-    "\n",
-    "注意到, \n",
-    "$\\mathcal{X}=\\left\\{ Xb:b\\in\\mathbb{R}^{K}\\right\\}$ 是一个由 $X=\\left[X_{\\cdot1},\\ldots,X_{\\cdot K}\\right]$ 中的 $K$ 列生成的线性空间; 如果这些列是线性独立的, 那么 $X$ 就是 $K$ 维的. 最小二乘法估计量 $\\widehat \\beta$ 使得 $\\left\\Vert Y-Xb\\right\\Vert^2$ 最小化, 也就是说使得 $\\left\\Vert Y-Xb\\right\\Vert$ 最小化 (对于 $a\\geq 0$, $a^2$ 是一个单调变换, 不影响最小化的结果) . 换言之, $X\\widehat{\\beta}$ 是 $\\mathcal{X}$ 中的一个点——与 $Y$ 最接近的一个点. \n",
-    "\n",
-    "\n",
-    "等式 $Y=X\\widehat{\\beta}+\\widehat{e}$ 将 $Y$ 分解为两个垂直向量, $X\\widehat{\\beta}$ 与 $\\widehat{e}$, 因为$\\left\\langle X\\widehat{\\beta},\\widehat{e}\\right\\rangle =\\widehat{\\beta}'X'\\widehat{e}=0_{K}^{\\prime}$, 其中$\\left\\langle \\cdot,\\cdot\\right\\rangle$ 是向量的内积运算. 那么, $X\\widehat{\\beta}$ 就是 $Y$ 在 $\\mathcal{X}$ 上的*投影 (projection)* , $\\widehat{e}$ 则是对应的*投影残差 (projection\n",
-    "residuals)*. 根据勾股定理, 自然有\n",
-    "\n",
-    "$$\n",
-    "\\left\\Vert Y\\right\\Vert ^{2}=\\Vert X\\widehat{\\beta}\\Vert^{2}+\\left\\Vert \\widehat{e}\\right\\Vert ^{2}.\n",
-    "$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "````{prf:example}\n",
     ":label: example1\n",
     "\n",
     "下面是一个简单的数值模拟案例, 我们以此来说明最小二乘法估计量的特性. 给定\n",
     "$\\left(x_{1i},x_{2i},x_{3i},e_{i}\\right)^{\\prime}\\sim N\\left(0_{4},I_{4}\\right)$, 因变量 $y_{i}$ 的生成式为\n",
+    "\n",
     "$$\n",
     "y_{i}=0.5+2\\cdot x_{1i}-1\\cdot x_{2i}+e_{i}\n",
     "$$\n",
@@ -267,7 +249,19 @@
     "在不知道 $x_{3i}$ 是多余的情况下, 我们将 $y_{i}$ 对\n",
     "$\\left(1,x_{1i},x_{2i},x_{3i}\\right)$ 进行回归. \n",
     "\n",
-    "```r\n",
+    "最后得到的参数估计值与真实值接近. 当然, 由于样本容量较小, 答案不是十分准确. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
     "library(magrittr); set.seed(2022-6-15)\n",
     "n = 20 # sample size \n",
     "K = 4 # number of paramters\n",
@@ -275,20 +269,50 @@
     "X = cbind(1, matrix( rnorm(n * (K-1)), nrow = n ) ) # the regressor matrix \n",
     "e = rnorm(n) # the error term\n",
     "Y = X %*% b0 + e # generate the dependent variable\n",
-    "bhat = solve(t(X) %*% X, t(X) %*% Y ) %>% as.vector() %>% print()\n",
-    "```\n",
-    "\n",
-    "最后得到的参数估计值与真实值已经很接近. 当然, 由于样本容量较小, 答案不是十分准确. \n",
-    "\n",
-    "```r\n",
+    "bhat = solve(t(X) %*% X, t(X) %*% Y ) %>% as.vector() %>% print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们继续用上面的数值例子来验证一些代数性质. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
     "ehat = Y - X %*% bhat \n",
     "as.vector( t(X) %*% ehat ) %>% print()\n",
     "MX = diag(n) - X %*% solve( crossprod(X) ) %*% t(X)\n",
+    "\n",
     "data.frame(e = e, ehat = ehat, MXY = MX%*%Y, MXe = MX%*%e ) %>% head()\n",
     "cat(\"The mean of the residual is \", mean(ehat), \".\\n\")\n",
-    "cat(\"The mean of the true error term is\", mean(e), \".\")\n",
-    "```\n",
-    "````"
+    "cat(\"The mean of the true error term is\", mean(e), \".\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 几何意义\n",
+    "\n",
+    "$\\mathcal{X}=\\left\\{ Xb:b\\in\\mathbb{R}^{K}\\right\\}$ 是一个由 $X=\\left[X_{\\cdot1},\\ldots,X_{\\cdot K}\\right]$ 中的 $K$ 列生成的线性空间; 如果这些列是线性独立的, 那么 $X$ 就是 $K$ 维的. 最小二乘法估计量 $\\widehat \\beta$ 使得 $\\left\\Vert Y-Xb\\right\\Vert$ 最小化. 换言之, $X\\widehat{\\beta}$ 是 $\\mathcal{X}$ 中与 $Y$ 最接近的那个点. \n",
+    "\n",
+    "\n",
+    "等式 $Y=X\\widehat{\\beta}+\\widehat{e}$ 将 $Y$ 分解为两个垂直向量, $X\\widehat{\\beta}$ 与 $\\widehat{e}$, 因为$\\left\\langle X\\widehat{\\beta},\\widehat{e}\\right\\rangle =\\widehat{\\beta}'X'\\widehat{e}=0_{K}^{\\prime}$, 其中$\\left\\langle \\cdot,\\cdot\\right\\rangle$ 是向量的内积运算. 那么, $X\\widehat{\\beta}$ 就是 $Y$ 在 $\\mathcal{X}$ 上的*投影 (projection)* , $\\widehat{e}$ 则是对应的*投影残差 (projection\n",
+    "residuals)*. 根据勾股定理, 自然有\n",
+    "\n",
+    "$$\n",
+    "\\left\\Vert Y\\right\\Vert ^{2}=\\Vert X\\widehat{\\beta}\\Vert^{2}+ \\Vert \\widehat{e}\\Vert^{2}.\n",
+    "$$\n"
    ]
   },
   {
@@ -297,22 +321,26 @@
    "source": [
     "## 子向量 (Subvector) \n",
     "\n",
-    "根据 Frish-Waugh-Lovell (FWL) 定理, 最小二乘法估计量的子向量有一个特殊的代数性质. 要得到FWL定理, 我们引入分块矩阵的逆矩阵这一概念. 对于一个实对称的正定矩阵\n",
+    "*Frish-Waugh-Lovell (FWL) 定理*是有关最小二乘的子向量的代数性质. 要得到FWL定理, 我们需要分块矩阵求逆的知识. 对称实数正定矩阵\n",
     "$A=\\begin{pmatrix}A_{11} & A_{12}\\\\\n",
     "A_{12}' & A_{22}\n",
-    "\\end{pmatrix},$\n",
-    "它的逆矩阵可以写作\n",
+    "\\end{pmatrix}$\n",
+    "逆矩阵可以写成\n",
     "\n",
     "$$\n",
     "A^{-1}=\\begin{pmatrix}\\left(A_{11}-A_{12}A_{22}^{-1}A_{12}'\\right)^{-1} & -\\left(A_{11}-A_{12}A_{22}^{-1}A_{12}'\\right)^{-1}A_{12}A_{22}^{-1}\\\\\n",
     "-A_{22}^{-1}A_{12}'\\left(A_{11}-A_{12}A_{22}^{-1}A_{12}'\\right)^{-1} & \\left(A_{22}-A_{12}'A_{11}^{-1}A_{12}\\right)^{-1}\n",
     "\\end{pmatrix}.\n",
     "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "\n",
-    "\n",
-    "将此性质运用至最小二乘法估计量. 记 $X=\\left(\\begin{array}{cc}\n",
-    "X_{1} & X_{2}\\end{array}\\right),$ 那么\n",
+    "将此性质运用至最小二乘法估计. 记 $X=(X_1, X_2)$, 则\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -333,10 +361,11 @@
     "\\heartsuit & \\heartsuit\n",
     "\\end{pmatrix}\\begin{pmatrix}X_{1}'Y\\\\\n",
     "X_{2}'Y\n",
-    "\\end{pmatrix}.\\end{aligned}\n",
-    "$$\n",
+    "\\end{pmatrix}.\n",
+    "\\end{aligned}\n",
+    "$$(eqn:fwl)\n",
     "\n",
-    "$\\widehat{\\beta}$ 的子向量可写作 \n",
+    "$\\widehat{\\beta}$ 的子向量 $\\widehat{\\beta}_{1}$ 可写成 \n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -346,7 +375,7 @@
     " & =\\left(X_{1}'M_{X_{2}}'X_{1}\\right)^{-1}X_{1}'M_{X_{2}}Y.\\end{aligned}\n",
     "$$\n",
     "\n",
-    "注意, 我们可以用三步方法得到 $\\widehat{\\beta}_{1}$: \n",
+    "以上 $\\widehat{\\beta}_{1}$ 的表达式就是 FWL 定理。该表达式意味着我们可以用三步方法得到 $\\widehat{\\beta}_{1}$: \n",
     "\n",
     "1. 将 $Y$ 对 $X_{2}$ 做回归, 得到残差 $\\tilde{Y}$;\n",
     "\n",
@@ -368,6 +397,8 @@
    },
    "outputs": [],
    "source": [
+    "# verify FWL theorem\n",
+    "\n",
     "X1 = X[,1:2];X2 = X[,3:4]\n",
     "PX2 = X2 %*% solve( t(X2) %*% X2) %*% t(X2) \n",
     "MX2 = diag(rep(1,n)) - PX2\n",
@@ -383,13 +414,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 适配度检验 (Goodness of Fit) \n",
+    "## 适配度 (Goodness of Fit) \n",
     "\n",
-    "考虑回归方程\n",
-    "$Y=X_{1}\\beta_{1}+\\beta_{2}+e$. 代入最小二乘法估计量, 我们得到\n",
+    "考虑一个带截距项的最小二乘法估计\n",
     "\n",
     "$$\n",
-    "Y=\\widehat{Y}+\\widehat{e}=\\left(X_{1}\\widehat{\\beta}_{1}+\\widehat{\\beta}_{2}\\right)+\\widehat{e}\n",
+    "Y=\\widehat{Y}+\\widehat{e}=(X_{1}\\widehat{\\beta}_{1}+\\widehat{\\beta}_{2})+\\widehat{e}\n",
     "$$(eqn:2)\n",
     "\n",
     "应用FWL定理, 令 $X_{2}=\\iota$, 其中希腊字母 $\\iota$ (iota)是一个所有位置都为1的 $n\\times1$ 向量. 那么$M_{X_{2}}=M_{\\iota}=I_{n}-\\frac{1}{n}\\iota\\iota'$. 其中, $M_{\\iota}z=z-\\bar{z}$. 也就是说, 我们在原本的向量 $z$ 中减去其均值 $\\bar{z}=\\frac{1}{n}\\sum_{i=1}^{n}z_{i}$. \n",
@@ -400,10 +430,10 @@
     "\n",
     "2. 将 $X_{1}$ 对 $\\iota$ 做回归, 得到残差 $M_{\\iota}X_{1}$;\n",
     "\n",
-    "3. 将 $M_{\\iota}Y$ 对 $M_{\\iota}X_{1}$ 做回归, 得到最小二乘法估计值 $\\widehat{\\beta}_{1}$ ——与 $(3.2)$ 中得到的结果完全一致. \n",
+    "3. 将 $M_{\\iota}Y$ 对 $M_{\\iota}X_{1}$ 做回归, 根据 {eq}`eqn:fwl` 得到最小二乘法估计值 $\\widehat{\\beta}_{1}$.\n",
     "\n",
     "\n",
-    "我们将最后一步进行分解\n",
+    "我们将最后一步进行分解 \n",
     "\n",
     "$$\n",
     "M_{\\iota}Y=M_{\\iota}X_{1}\\widehat{\\beta}_{1}+\\tilde{e},\n",
@@ -412,7 +442,7 @@
     "应用勾股定理得到\n",
     "\n",
     "$$\n",
-    "\\left\\Vert M_{\\iota}Y\\right\\Vert ^{2}=\\Vert M_{\\iota}X_{1}\\widehat{\\beta}_{1}\\Vert^{2}+\\left\\Vert \\widehat{e}\\right\\Vert ^{2}.\n",
+    "\\left\\Vert M_{\\iota}Y\\right\\Vert ^{2}=\\Vert M_{\\iota}X_{1}\\widehat{\\beta}_{1}\\Vert^{2}+ \\Vert \\widehat{e} \\Vert^{2}.\n",
     "$$\n"
    ]
   },
@@ -423,7 +453,7 @@
     "```{exercise}\n",
     ":label: exercise31\n",
     "\n",
-    "试说明: {eq}`eqn:2` 式中的 $\\widehat{e}$ 与 {eq}`eqn:3` 式中的 $\\tilde{e}$ 相等. \n",
+    "证明：{eq}`eqn:2` 式中的 $\\widehat{e}$ 与 {eq}`eqn:3` 式中的 $\\tilde{e}$ 相等. \n",
     "```"
    ]
   },
@@ -437,7 +467,7 @@
     "R^{2}=\\frac{\\Vert M_{\\iota}X_{1}\\widehat{\\beta}_{1}\\Vert^{2}}{\\left\\Vert M_{\\iota}Y\\right\\Vert ^{2}}=1-\\frac{\\left\\Vert \\tilde{e}\\right\\Vert ^{2}}{\\left\\Vert M_{\\iota}Y\\right\\Vert ^{2}}.\n",
     "$$\n",
     "\n",
-    "仅当回归因子包含常数时, $R^2$ 才有定义. "
+    "当归回包含截距项时, $R^2$ 才有定义. "
    ]
   },
   {
@@ -447,17 +477,22 @@
     "```{exercise}\n",
     ":label: exercise32\n",
     "\n",
-    "在 {eq}`eqn:2` 式的分解下, 证明\n",
+    "在 {eq}`eqn:2` 式的分解下, 证明 $R^{2}$ 即为 $\\widehat{Y}$ 的样本方差与 $Y$ 的样本方差之比：\n",
     "\n",
     "$$\n",
     "R^{2}=\\frac{\\widehat{Y}'M_{\\iota}\\widehat{Y}}{Y'M_{\\iota}Y}=\\frac{\\sum_{i=1}^{n}\\left(\\widehat{y_{i}}-\\overline{y}\\right)^{2}}{\\sum_{i=1}^{n}\\left(y_{i}-\\overline{y}\\right)^{2}}.\n",
     "$$\n",
-    "注意, 上述 $R^{2}$ 即为$\\widehat{Y}$的样本方差与 $Y$ 的样本方差之比值. \n",
     "\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
-    "决定系数 $R^2$ 的大小在不同的实际问题下差别很大. 在具有滞后效应的宏观模型中, 遇到 $R^2$ 大于90%的情况并不罕见. 然而, 在横向研究 (cross sectional regressions) 中, $R^2$ 的值经常是低于20%的. "
+    "决定系数 $R^2$ 的大小在不同的实际问题当中差别很大. $R^2$ 大于90%的情况在带有滞后效应的宏观模型中并不罕见. 然而, 在截面数据回归 (cross sectional regressions) 中, $R^2$ 的值经常是低于20%. "
    ]
   },
   {
@@ -468,10 +503,10 @@
     ":label: exercise33\n",
     "\n",
     "考虑一个较“短”的回归 \"将 $y_{i}$ 对 $x_{1i}$ 做回归\" 与一个较“长”的回归\n",
-    " \"将 $y_{i}$ 对 $\\left(x_{1i},x_{2i}\\right)$ 做回归\": 给定相同的数据集 $\\left(Y,X_{1},X_{2}\\right)$, 试说明“短”回归的 $R^2$ 不比“长”回归的 $R^2$ 大. (也就是说, 通过增加更多的回归因子, 我们总能使得 $R^2$ 增大或者不变. ) \n",
+    " \"将 $y_{i}$ 对 $\\left(x_{1i},x_{2i}\\right)$ 做回归\": 给定相同的数据集 $\\left(Y,X_{1},X_{2}\\right)$, 试说明“短”回归的 $R^2$ 不比“长”回归的 $R^2$ 大. 也就是说, 通过增加更多的回归变量, 我们总能使得 $R^2$ 不会变小. ) \n",
     "```\n",
     "\n",
-    "在传统意义上, 回归因子的数量 $K$ 总是远小于样本量 $n$ . 然而, 在大数据时代, (潜在) 回归因子的数量 $K$ 有可能大于样本量 $n$. \n"
+    "在传统意义上, 回归因子的数量 $K$ 总是远小于样本量 $n$ . 然而, 在大数据时代, (潜在) 回归变量的数量 $K$ 有可能大于样本量 $n$. \n"
    ]
   },
   {
@@ -483,14 +518,24 @@
     "\n",
     "证明: 当 $K\\geq n$ 时, $R^{2}=1$. 注意, 若 $K>n$, 则矩阵 $X'X$ 是缺秩 (rank deficient) 的. 在这种情况下, 我们可以将最小二乘法的定义扩展, $\\hat \\beta$ 仍然是使得 $\\left\\Vert Y-Xb\\right\\Vert ^{2}$ 最小化的参数值, 但这个值不是唯一的. \n",
     "\n",
-    "```r\n",
+    "以下是本练习的数值实例。\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
     "n = 5; K = 6; \n",
     "Y = rnorm(n)\n",
     "X = matrix( rnorm(n*K), n)\n",
-    "summary( lm(Y~X) )\n",
-    "```\n",
-    "\n",
-    "````"
+    "summary( lm(Y~X) )"
    ]
   },
   {
@@ -513,7 +558,7 @@
     "\n",
     "## 总结\n",
     "\n",
-    "以上有关线性代数的性质, 在有限样本中是成立的, 无论数据是固定数字或是随机变量. 然而高斯马尔科夫定理 (Gauss Markov theorem) 只在两个关键假设下成立: 线性的条件期望方程 (linear CEF) 和同方差性 (homoscedasticity) . \n",
+    "本章完全是线性代数操作，无关数据背后的概率模型. 只要 $X'X/n$ 可逆, 以上线性代数性质对任何有限样本 $n$ 都成立. \n",
     "\n",
     "\n",
     "```{admonition} 历史趣闻\n",
@@ -524,28 +569,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.1.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "25a19fbe0a9132dfb9279d48d161753c6352f8f9478c2e74383d340069b907c3"
+   }
   }
  },
  "nbformat": 4,
