--- a/lecture5-CN.ipynb
+++ b/lecture5-CN.ipynb
@@ -20,12 +20,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "我们身处的宇宙虽然浩瀚, 却只由不到 $10^{82}$ 个原子组成——这是一个有限的数字. 然而, 数学思想并不受制于现实. 渐进理论 (Asymptotic theory) 是一门有关无限的艺术, 它研究统计量在样本量趋于无穷大之时的性质与行为. 它用一系列“近似”的技巧来简化复杂的有限样本分析问题. 可以说, 渐近理论是现代计量经济学的基石. 它超越了有限样本理论所涵盖的一切, 揭示了在更普遍情况下 (也即无限情况下) 的统计估计与推断理论. \n",
+    "我们身处的浩瀚宇宙当中, 原子的数目小于 $10^{82}$ 个。这是一个天文数字，然而也是一个有限的数字. 然而, 数学思想并不受制于现实. 渐进理论 (Asymptotic theory) 是一门有关无限的艺术, 它研究统计量在样本量趋于无穷大之时的性质与行为. 它用一系列“近似”的技巧来简化复杂的有限样本问题. 渐近理论是现代计量经济学的基石. 它超越了有限样本理论所涵盖范围, 揭示了在更普遍情况下的统计估计与推断理论. \n",
     "\n",
     "\n",
-    "然而现实与理想相悖：我们手中的样本量总是有限的, 而且在大多数情况下, 我们也很难去增加样本量. 渐近理论虽然研究无穷大, 却不能准确回答 \"多大才是大\"这个问题. 因此, 我们必须警惕 *渐近乌托邦 (asymptopia)* 的出现. 在大数据时代, 尽管数据的规模急剧膨胀, 但我们仍有必要建立复杂的模型来更好地捕捉数据的异质性. 当然, 大样本是一个相对的概念, 与模型的复杂性和数据的基本 (非) 依赖性结构相对. \n",
+    "然而现实与理想相悖：我们手中的样本量总是有限的, 而且在大多数情况下, 我们也很难去增加样本量. 渐近理论虽然研究无穷大, 却不能准确回答 \"多大才是大\"这个问题. 因此, 我们必须警惕 *渐近乌托邦 (asymptopia)* 的出现. 在大数据时代, 尽管数据的规模急剧膨胀, 同时我们希望建立复杂的模型来更好地捕捉数据的异质性. 大样本是一个相对的概念, 依赖于模型的复杂性和数据的基本生成过程. \n",
     "\n",
-    "经典的参数化方法建立在难以验证的参数化假设之上, 而渐进理论以假想的无限序列为前提, 可以说二者都偏离了现实. 哪种方法更有建设性? 我们只能根据具体情况来判断. 渐进理论的优点在于它数学上的普遍性与易操作性. 正因如此, 渐进理论摘得我们这个时代数理统计学的桂冠. \n",
+    "一方面，经典的参数化方法建立在难以验证的参数假设之上. 另一方面，渐进理论以假想的无限序列为前提. 可以说, 二者都偏离了现实. 哪种方法更有建设性? 我们只能根据具体情况来判断. 渐进理论的优点在于它数学上的普遍性与易操作性. 正因如此, 渐进理论摘得我们这个时代数理统计学的桂冠. \n",
     "\n"
    ]
   },
@@ -37,30 +37,36 @@
     "## 随机变量的收敛模式\n",
     "\n",
     "\n",
-    "首先回顾一下什么是非随机序列的收敛, 这一点我们在高中就学过了. \n",
+    "首先回顾一下什么是非随机序列的收敛. \n",
     "\n",
-    "```{prf:definition} 非随机变量收敛 Convergence of deterministic variables\n",
+    "```{prf:definition} 非随机序列的收敛\n",
     ":label: con_of_dv\n",
     "\n",
-    "假设 $z_{1}, z_{2}, \\ldots$ 是一个非随机变量 (确定变量) 的无限序列. 如果对于任意 $\\varepsilon>0$, 存在 $N\\left(\\varepsilon\\right)$ 使得：对于任意 $n>N\\left(\\varepsilon\\right)$, 都有\n",
+    "假设 $z_{1}, z_{2}, \\ldots$ 是一个非随机的无限序列. 如果对于任意 $\\varepsilon>0$, 存在 $N\\left(\\varepsilon\\right)$ 使得：对于所有 $n>N\\left(\\varepsilon\\right)$, 都有\n",
     "$\\left|z_{n}-z\\right|<\\varepsilon$, 那么称 $\\{z_n\\}$ 是收敛序列. \n",
     "\n",
     "我们将 $z$ 称作 $z_{n}$ 的极限, 并记 $z_{n}\\to z$, 或者 $\\lim_{n\\to\\infty}z_{n}=z$. \n",
-    "```\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19a667c6",
+   "metadata": {},
+   "source": [
     "\n",
-    "然而我们感兴趣的不是确定变量, 而是一个随机变量序列的收敛性. 基于可测函数的概率测度, 我们得以建立随机变量的“随机”性. 那么, 何谓随机变量的收敛? 我们在此介绍几种不同的随机变量的收敛模式. \n",
+    "然而我们感兴趣的不是确定性序列, 而是随机变量序列. 何谓随机变量的收敛? 我们在此定义几种随机变量的收敛模式. 设 $\\left(z_{n}\\right)$ 是一个随机变量序列, $z$ 是随机变量或非随机常数.\n",
     "\n",
-    "\n",
-    "```{prf:definition} 依概率收敛 Convergence in probability\n",
+    "```{prf:definition} 依概率收敛 (Convergence in probability)\n",
     ":label: con_in_prob\n",
     "\n",
-    "设 $\\left(z_{n}\\right)$ 是一个随机变量序列, $z$ 是随机变量或非随机常数. 如果对于任意 $\\varepsilon>0$, 当 $n\\to\\infty$ 时, 都有 $P\\left\\{ \\omega:\\left|z_{n}\\left(\\omega\\right)-z\\right|<\\varepsilon\\right\\} \\to 1$ (或者等价地, $P\\left\\{ \\omega:\\left|z_{n}\\left(\\omega\\right)-z\\right|\\geq\\varepsilon\\right\\} \\to0$) , 那么称随机变量序列$\\left(z_{n}\\right)$ 依概率收敛到 $z$, 记作 $z_{n}\\stackrel{p}{\\to}z$. \n",
+    " 如果对于任意 $\\varepsilon>0$, 当 $n\\to\\infty$ 时, 都有 $P\\left\\{ \\omega:\\left|z_{n}\\left(\\omega\\right)-z\\right|<\\varepsilon\\right\\} \\to 1$ (或者等价地, $P\\left\\{ \\omega:\\left|z_{n}\\left(\\omega\\right)-z\\right|\\geq\\varepsilon\\right\\} \\to0$) , 则称随机变量序列 $\\left(z_{n}\\right)$ 依概率收敛到 $z$, 记作 $z_{n}\\stackrel{p}{\\to}z$. \n",
     "```\n",
     "\n",
-    "```{prf:definition} 均方收敛 Convergence in mean square\n",
+    "```{prf:definition} 均方收敛 (Convergence in mean square)\n",
     ":label: con_in_ms\n",
     "\n",
-    "设 $\\left(z_{n}\\right)$ 是一个随机变量序列, $z$ 是随机变量或非随机常数. 如果当 $n\\to\\infty$ 时, $E\\left[\\left(z_{n}-z\\right)^{2}\\right]\\to0$. 那么称随机变量序列$\\left(z_{n}\\right)$ 均方收敛到 $z$, 记作 $z_{n}\\stackrel{m. s. }{\\to}z$. \n",
+    "如果当 $n\\to\\infty$ 时, $E\\left[\\left(z_{n}-z\\right)^{2}\\right]\\to0$， 则称随机变量序列$\\left(z_{n}\\right)$ 均方收敛到 $z$, 记作 $z_{n}\\stackrel{m. s. }{\\to}z$. \n",
     "```"
    ]
   },
@@ -69,9 +75,16 @@
    "id": "9184018a",
    "metadata": {},
    "source": [
-    "在 {prf:ref}`con_in_prob` 与 {prf:ref}`con_in_ms` 中, $P\\left\\{ \\omega:\\left|z_{n}\\left(\\omega\\right)-z\\right|>\\varepsilon\\right\\}$ 与 $E\\left[\\left(z_{n}-z\\right)^{2}\\right]$ 都是非随机的变量, 它们以非随机变量的收敛方式 ({prf:ref}`con_of_dv`) 收敛至0. \n",
+    "在 {prf:ref}`con_in_prob` 与 {prf:ref}`con_in_ms` 中, $P\\left\\{ \\omega:\\left|z_{n}\\left(\\omega\\right)-z\\right|>\\varepsilon\\right\\}$ 与 $E\\left[\\left(z_{n}-z\\right)^{2}\\right]$ 都是非随机的. 它们依非随机序列的收敛方式 ({prf:ref}`con_of_dv`) 趋近于0. \n",
     "\n",
-    "注意, 均方收敛的假设比依概率收敛的假设更强. 也就是说, 可以从 $z_{n}\\stackrel{m. s. }{\\to}z$ 推导出 $z_{n}\\stackrel{p}{\\to}z$, 但反过来并不成立. 下面是一个例子. \n",
+    "注意, 均方收敛的假设比依概率收敛的假设更强. 也就是说, 可以从 $z_{n}\\stackrel{m. s. }{\\to}z$ 推导出 $z_{n}\\stackrel{p}{\\to}z$, 但反过来不成立. 下面是一个例子. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99c338a6",
+   "metadata": {},
+   "source": [
     "\n",
     "````{prf:example}\n",
     ":label: in_p_in_ms\n",
@@ -86,7 +99,7 @@
     "```{prf:remark}\n",
     ":label: remark1\n",
     "\n",
-    "{prf:ref}`in_p_in_ms` 揭示了两种收敛方式的不同. 依概率收敛并不考虑小概率的样本空间上发生的事情, 而均方收敛涉考虑的则是整个概率空间的平均值. 如果某个随机变量可以取一个奇怪的值, 即使这是小概率事件, 它也可能会影响均方收敛, 却并不会破坏依概率收敛的性质. \n",
+    "{prf:ref}`in_p_in_ms` 揭示了两种收敛方式的不同. 依概率收敛并不考虑小概率事件是后果, 而均方收敛涉考虑的则是整个概率空间上的平均值. 如果某个随机变量可以取一个巨大的值, 即使这是小概率事件, 它也可能会影响均方收敛, 却并不会破坏依概率收敛. \n",
     "```"
    ]
   },
@@ -95,7 +108,7 @@
    "id": "1b53ebf1",
    "metadata": {},
    "source": [
-    "依概率收敛与均方收敛都是定义一个随机变量收敛至一个随机变量 (或常数) . 也就是说, 当 $n\\to\\infty$ 时, $z_{n}-z$ 的分布聚集在 0 左右. 但是, *依分布收敛 convergence in distribution* 关心的却是**累积分布函数CDF**的收敛方式, 并非随机变量的收敛方式. \n",
+    "依概率收敛与均方收敛都事关一个随机变量收敛至另一个随机变量或者常数. 也就是说, 当 $n\\to\\infty$ 时, $z_{n}-z$ 的分布聚集在 0 左右. 但是, *依分布收敛 (convergence in distribution*) 关心的却是 *累积分布函数CDF* 的收敛方式, 并非随机变量的收敛方式. \n",
     "\n",
     "```{prf:definition} 依分布收敛 Convergence in distribution\n",
     ":label: con_in_dist\n",
@@ -103,7 +116,7 @@
     "设 $F_{z_{n}}\\left(\\cdot\\right)$ 随机变量序列 $z_{n}$ 的累积分布函数, $F_{z}\\left(\\cdot\\right)$ 的累计分布函数. 如果对于 $F_{z}\\left(\\cdot\\right)$ 的任意连续点 $a\\in\\mathbb{R}$, 当 $n\\to\\infty$ 时, 都有 $F_{z_{n}}\\left(a\\right)\\to F_{z}\\left(a\\right)$, 那么称随机变量序列$\\left(z_{n}\\right)$ 依分布收敛到随机变量 $z$, 记作 $z_{n}\\stackrel{d}{\\to}z$. \n",
     "```\n",
     "\n",
-    "依分布收敛是一种弱收敛性质. 如果 $z_{n}\\stackrel{p}{\\to}z$, 那么 $z_{n}\\stackrel{d}{\\to}z$. 反之不一定成立, 除非 $z$ 是一个非随机的常数 (常数 $z$ 可以被视作一个退化的随机变量, 其累积分布函数可写作 $F_{z}\\left(\\cdot\\right)=1\\left\\{ \\cdot\\geq z\\right\\}$) . \n",
+    "依分布收敛是一种弱收敛性质. 如果 $z_{n}\\stackrel{p}{\\to}z$, 则 $z_{n}\\stackrel{d}{\\to}z$. 反之不一定成立, 除非 $z$ 是一个(非随机)常数 (常数 $z$ 可以被视作一个退化的随机变量, 其累积分布函数可写作 $F_{z}\\left(\\cdot\\right)=1\\left\\{ \\cdot\\geq z\\right\\}$) . \n",
     "\n",
     "```{prf:example}\n",
     ":label: in_p_in_dist\n",
@@ -111,7 +124,14 @@
     "假设 $x\\sim N\\left(0, 1\\right)$. \n",
     "* 若 $z_{n}=x+1/n$, 则 $z_{n}\\stackrel{p}{\\to}x$, 且 $z_{n}\\stackrel{d}{\\to}x$. \n",
     "* 若 $z_{n}=-x+1/n$, 或 $z_{n}=y+1/n$ (其中 $y\\sim N\\left(0, 1\\right)$ 与 $x$ 独立) , 则 $z_{n}\\stackrel{p}{\\to}x$, 但 $z_{n}\\stackrel{p}{\\nrightarrow}x$. \n",
-    "```\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f81c309a",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
     "````{prf:example}\n",
@@ -149,9 +169,9 @@
    "id": "a8b6198c",
    "metadata": {},
    "source": [
-    "## 大数定律 (LLN)\n",
+    "## 大数定律\n",
     "\n",
-    "(弱) 大数定律 (LLN) 是一组关于 *样本均值依概率收敛至总体均值* 的定理. \n",
+    "(弱) 大数定律 ((weak) law of large numbers) 是一组关于 *样本均值依概率收敛至总体均值* 的定理. \n",
     "\n",
     "大数定律的基本形式是, 当 $n\\to\\infty$ 时, 有\n",
     "\n",
@@ -159,7 +179,7 @@
     "\\frac{1}{n}\\sum_{i=1}^{n}(z_{i}-E[z_{i}])\\stackrel{p}{\\to}0. \n",
     "$$ \n",
     "\n",
-    "不同版本的大数定律基于不同的假设, 也取决于对应随机变量的不同性质. \n"
+    "不同版本的大数定律基于不同的假设, 也取决于对应随机变量的不同相依性(dependence). \n"
    ]
   },
   {
@@ -167,12 +187,12 @@
    "id": "5f3bbd11",
    "metadata": {},
    "source": [
-    "### 切比雪夫大数定律 Chebyshev LLN\n",
+    "### Chebyshev大数定律\n",
     "\n",
     "\n",
-    "我们从最简单的切比雪夫大数定律入手, 来理解大数定律. 切比雪夫大数定律利用了*切比雪夫不等式(Chebyshev's inequality)*, 其定义如下. \n",
+    "我们从最简单的Chebyshev大数定律入手, 来理解大数定律. Chebyshev大数定律利用了*Chebyshev不等式*, 其定义如下. \n",
     "\n",
-    "```{prf:theorem} 切比雪夫不等式 Chebyshev's inequality\n",
+    "```{prf:theorem} Chebyshev不等式\n",
     ":label: cheb_ineq\n",
     "\n",
     "如果随机变量 $x$ 的二阶矩存在且有限 $E\\left[x^{2}\\right]<\\infty$, 那么对于任意 $\\varepsilon>0$, 都有 \n",
@@ -189,19 +209,19 @@
     "证明：若 $r_{2}\\geq r_{1}\\geq1$, 则由 $E\\left[\\left|x\\right|^{r_{2}}\\right]<\\infty$ 可推断出 $E\\left[\\left|x\\right|^{r_{1}}\\right]<\\infty$. (提示：使用 Holder’s 不等式. ) \n",
     "```\n",
     "\n",
-    "其实, 切比雪夫不等式是 *马尔可夫不等式 (Markov's inequality)* 的一种特殊情况. \n",
+    "其实, Chebyshev不等式是 *Markov不等式* 的一种特殊情况. \n",
     "\n",
-    "```{prf:theorem} 马尔可夫不等式 Markov's inequality\n",
+    "```{prf:theorem} Markov不等式\n",
     ":label: markov_ineq\n",
     "\n",
-    "如果随机变量 $x$ 的 $r$ 阶矩($r\\ge1$)存在且有限 $E\\left[\\left|x\\right|^{r}\\right]<\\infty$, 那么对于任意 $\\varepsilon>0$, 都有 \n",
+    "如果随机变量 $x$ 的 $r$ 阶矩 ($r\\ge1$) 存在且有限 $E\\left[\\left|x\\right|^{r}\\right]<\\infty$, 则对于任意 $\\varepsilon>0$, 都有 \n",
     "\n",
     "$$\n",
     "P\\left\\{ \\left|x\\right|>\\varepsilon\\right\\} \\leq \\frac{E\\left[\\left|x\\right|^{r}\\right]}{\\varepsilon^{r}}. \n",
     "$$\n",
     "```\n",
     "\n",
-    "马尔可夫不等式的证明十分简单. \n"
+    "Markov不等式的证明十分简单. \n"
    ]
   },
   {
@@ -221,16 +241,16 @@
     "\\end{aligned}\n",
     "$$ \n",
     "\n",
-    "重新排列此不等式, 即可得到马尔可夫不等式. \n",
+    "重新排列此不等式, 即可得到 Markov 不等式. \n",
     "\n",
     "```\n",
     "\n",
     "\n",
-    "接下来我们尝试导出切比雪夫大数定律. \n",
+    "接下来我们推导 Chebyshev 大数定律. \n",
     "\n",
     "假设 *部分和 (partial sum)* $S_{n}=\\sum_{i=1}^{n}x_{i}$, 同时记 $\\mu_{i}=E\\left[x_{i}\\right]$, $\\sigma_{i}^{2}=\\mathrm{var}\\left[x_{i}\\right]$. \n",
     "\n",
-    "对样本均值 $z_{n}=\\overline{x}-\\bar{\\mu}=n^{-1}\\left(S_{n}-E\\left[S_{n}\\right]\\right)$ 运用切比雪夫不等式, 得到\n",
+    "对样本均值 $z_{n}=\\overline{x}-\\bar{\\mu}=n^{-1}\\left(S_{n}-E\\left[S_{n}\\right]\\right)$ 运用 Chebyshev 不等式, 得到\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -243,20 +263,20 @@
     "\n",
     "如果在 $n\\to\\infty$ 时, 右式趋近于0, 那么 $z_{n}$ 依概率收敛至0. 比如, 若 $x_{1}, \\ldots, x_{n}$ 是 iid 变量, $\\mathrm{var}\\left(x_{1}\\right)=\\sigma^{2}$, 那么 {eq}`eqn:cheb_mean` 右式 $\\left(n\\varepsilon\\right)^{-2}\\left(n\\sigma^{2}\\right)=o\\left(n^{-1}\\right)\\to0$. \n",
     "\n",
-    "至此, 我们已经得到了切比雪夫大数定律. \n",
+    "至此, 我们已经得到了 Chebyshev 大数定律. \n",
     "\n",
     "\n",
-    "```{prf:theorem} 切比雪夫大数定律 Chebyshev LLN\n",
+    "```{prf:theorem} Chebyshev 大数定律\n",
     ":label: cheb_lln\n",
     "\n",
-    "如果 $\\left(z_{1}, \\ldots, z_{n}\\right)$ 是独立同分布 (iid) 的随机样本, $E\\left[z_{1}\\right]=\\mu$, $\\sigma^{2}=\\mathrm{var}\\left[z_{1}\\right]<\\infty$ 存在, 那么\n",
+    "如果 $\\left(z_{1}, \\ldots, z_{n}\\right)$ 是独立同分布 (iid) 的随机样本, $E\\left[z_{1}\\right]=\\mu$, $\\sigma^{2}=\\mathrm{var}\\left[z_{1}\\right]<\\infty$ 存在, 则\n",
     "\n",
     "$$\n",
     "\\frac{1}{n}\\sum_{i=1}^{n}z_{i}\\stackrel{p}{\\to}\\mu. \n",
     "$$\n",
     "```\n",
     "\n",
-    "事实上, 依概率收敛的大数定律可以去除独立同分布 (iid) 的假设：样本中的随机变量可以不是同分布的, 也不必相互独立. \n"
+    "事实上, 依概率收敛的大数定律可以去除独立同分布 (iid) 的假设; 样本中的随机变量可以不是同分布的, 也不必相互独立. \n"
    ]
   },
   {
@@ -268,7 +288,7 @@
     "```{exercise}\n",
     ":label: exercise52\n",
     "\n",
-    "考虑一组相互独立 (不一定同分布) 的随机样本 $\\left(x_{1}, \\ldots, x_{n}\\right)$ 使得 $E\\left[x_{i}\\right]=0$, $\\mathrm{var}\\left[x_{i}\\right]=\\sqrt{n}c$, $c>0$是常数. 利用切比雪夫不等式, 证明 $n^{-1}\\sum_{i=1}^{n}x_{i}\\stackrel{p}{\\to}0$. \n",
+    "考虑一组相互独立 (不一定同分布) 的随机样本 $\\left(x_{1}, \\ldots, x_{n}\\right)$ 使得 $E\\left[x_{i}\\right]=0$, $\\mathrm{var}\\left[x_{i}\\right]=\\sqrt{n}c$, $c>0$是常数. 利用 Chebyshev 不等式, 证明 $n^{-1}\\sum_{i=1}^{n}x_{i}\\stackrel{p}{\\to}0$. \n",
     "```\n"
    ]
   },
@@ -281,7 +301,7 @@
     "```{exercise}\n",
     ":label: exercise52\n",
     "\n",
-    "考虑一组时间序列的移动平均 (MA) 模型 $x_{i}=\\varepsilon_{i}+\\theta\\varepsilon_{i-1}$, $i=1, \\ldots, n$. 其中, $\\left|\\theta\\right|<1$, $E\\left[\\varepsilon_{i}\\right]=0$, $\\mathrm{var}\\left[\\varepsilon_{i}\\right]=\\sigma^{2}$, 并且 $\\left(\\varepsilon_{i}\\right)_{i=0}^{n}$ 是独立同分布的白噪声序列. 利用切比雪夫不等式, 证明 $n^{-1}\\sum_{i=1}^{n}x_{i}\\stackrel{p}{\\to}0$. \n",
+    "考虑一组时间序列的移动平均 (MA) 模型 $x_{i}=\\varepsilon_{i}+\\theta\\varepsilon_{i-1}$, $i=1, \\ldots, n$. 其中, $\\left|\\theta\\right|<1$, $E\\left[\\varepsilon_{i}\\right]=0$, $\\mathrm{var}\\left[\\varepsilon_{i}\\right]=\\sigma^{2}$, 并且 $\\left(\\varepsilon_{i}\\right)_{i=0}^{n}$ 是独立同分布的白噪声序列. 利用 Chebyshev 不等式, 证明 $n^{-1}\\sum_{i=1}^{n}x_{i}\\stackrel{p}{\\to}0$. \n",
     "\n",
     "```\n"
    ]
@@ -293,7 +313,7 @@
    "source": [
     "### Kolmogorov大数定律\n",
     "\n",
-    "大数定律的另一个常见版本是*Kolmogorov大数定律*. 要导出 Kolmogorov大数定律, 需要更高阶的概率论知识, 因此我们只在此给出结果, 证明略去. \n",
+    "大数定律的另一个常见版本是*Kolmogorov大数定律*. 要导出 Kolmogorov大数定律, 需要更高阶的概率论知识, 因此我们只在此给出结果, 略去证明. \n",
     "\n",
     "\n",
     "```{prf:theorem} Kolmogorov LLN\n",
@@ -322,6 +342,8 @@
    "id": "ac62f120",
    "metadata": {},
    "source": [
+    "[need translation]\n",
+    "\n",
     "This script demonstrates the law of large numbers (LLN) along with the underlying assumptions.\n",
     "\n",
     "Write a function to generate the sample mean given the sample size $n$ and the distribution.\n",
@@ -397,11 +419,11 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 中心极限定理 (CLT)\n",
+    "## 中心极限定理\n",
     "\n",
-    "中心极限定理 (CLT) 是一组关于某随机变量序列 *依分布收敛至某稳定分布* 的定理. 通常来说, 收敛至极限状态的稳定分布即为正态分布. \n",
+    "中心极限定理 (central limit theorem) 是一组关于某随机变量序列 *依分布收敛至某稳定分布* 的定理. 极限分布通常是正态分布. \n",
     "\n",
-    "```{prf:theorem} 中心极限定理 CLT\n",
+    "```{prf:theorem} 中心极限定理\n",
     ":label: clt\n",
     "\n",
     "*在适当条件下*, 对于均值为0的随机样本 $\\left(z_{1}, \\ldots, z_{n}\\right)$, 当 $n\\to\\infty$ 时, \n",
@@ -412,7 +434,7 @@
     "\n",
     "```\n",
     "\n",
-    "不同版本的中心极限定理基于对随机变量的不同假设. 其中, *Lindeberg-Levy CLT* 是最简单的中心极限定理. \n",
+    "不同版本的中心极限定理基于对随机变量的不同假设. 其中, *Lindeberg-Levy 中心极限定理* 最为简单. \n",
     "\n",
     "```{prf:theorem} Lindeberg-Levy CLT\n",
     ":label: ll-clt\n",
@@ -426,7 +448,7 @@
     "```\n",
     "\n",
     "\n",
-    "Lindeberg-Levy CLT 的证明依赖于 *矩生成函数 (MGF, moment generating function)*. \n",
+    "Lindeberg-Levy 中心极限定理的证明依赖于 *矩母函数 (MGF, moment generating function)*. \n",
     "\n",
     "\n",
     "```{prf:definition} 矩生成函数 MGF\n",
@@ -441,7 +463,7 @@
     "```\n",
     "\n",
     "\n",
-    "MGF (矩生成函数) 完全刻画了一个分布的性质, 它等价于 PDF (概率密度函数) , CDF (累积分布函数) . 例如, 正态分布 $N\\left(\\mu, \\sigma^{2}\\right)$ 的 MGF 是 $\\exp\\left(\\mu t+\\frac{1}{2}\\sigma^{2}t^{2}\\right)$. \n",
+    "与概率密度函数和累积分布函数一样, 矩母函数也可以完全刻画了一个分布. 例如, 正态分布 $N\\left(\\mu, \\sigma^{2}\\right)$ 的矩母函数是 $\\exp\\left(\\mu t+\\frac{1}{2}\\sigma^{2}t^{2}\\right)$. \n",
     "\n",
     "```{prf:proof}\n",
     "如果对于任意正整数 $k$, 都有 $E\\left[\\left|x\\right|^{k}\\right]<\\infty$, 那么\n",
@@ -465,12 +487,12 @@
     "\\end{aligned}\n",
     "$$ \n",
     "\n",
-    "右式的极限分布恰为正态分布的 $N\\left(0, \\sigma^{2}\\right)$ 的 MGF. \n",
+    "右式的极限分布恰为正态分布的 $N\\left(0, \\sigma^{2}\\right)$ 的矩母函数. \n",
     "```\n",
     "\n",
     "```{prf:remark}\n",
     ":label: remark51\n",
-    "上述依赖于 MGF 的证明非常易于理解, 但缺点在于, 并非所有分布都有定义良好的 MGF. 更一般的证明过程是把 MGF 替换为 *特征函数(characteristic function)* $\\varphi_{x}\\left(t\\right)=E\\left[\\exp\\left(\\mathrm{i}xt\\right)\\right]$, 其中 “$\\mathrm{i}$” 是虚数单位. 特征函数是概率测度的 *傅立叶变换* , 它必然存在. 用这种方法来证明中心极限定理, 需要傅立叶变换与逆转换的知识, 我们在这里不做要求. \n",
+    "上述依赖于 MGF 的证明非常易于理解, 但缺点在于, 并非所有分布都有定义良好的矩母函数. 更一般的证明过程是把矩母函数替换为 *特征函数(characteristic function)* $\\varphi_{x}\\left(t\\right)=E\\left[\\exp\\left(\\mathrm{i}xt\\right)\\right]$, 其中 “$\\mathrm{i}$” 是虚数单位. 特征函数是概率测度的 *傅立叶变换* , 它必然存在. 用这种方法来证明中心极限定理, 需要傅立叶变换与逆转换的知识, 我们在这里不做要求. \n",
     "```\n"
    ]
   },
@@ -563,13 +585,13 @@
     "\n",
     "## 转化方法\n",
     "\n",
-    "在原始定理下, 大数定律直接解决样本均值问题, 中心极限定理则聚焦于缩小后 (除以 $\\sqrt{n}$ ) 或标准化以后 (除以样本标准差) 的样本均值. 但是, 大多数计量经济学的问题直接取决于样本均值. 比如, 最小二乘法的参数估计量\n",
+    "大数定律事关样本均值, 而中心极限定理则聚焦于缩小后 (除以 $\\sqrt{n}$ ) 或标准化以后 (除以样本标准差) 的样本均值. 但是, 大多数计量经济学的问题不只是样本均值而已. 比如, 最小二乘估计量\n",
     "\n",
     "$$\n",
     "\\widehat{\\beta}=\\left(\\frac{1}{n}\\sum_{i}x_{i}x_{i}'\\right)^{-1}\\frac{1}{n}\\sum_{i}x_{i}y_{i}\n",
     "$$\n",
     "\n",
-    "蕴含了矩阵的取逆计算以及矩阵-向量的乘法. 在此, 我们需要一些转化随机变量的工具. \n",
+    "涉及矩阵求逆和矩阵-向量乘法. 在此, 我们需要一些转化随机变量的工具. \n",
     "\n",
     "```{prf:theorem} 连续映射定理 Continuous mapping theorem 1\n",
     ":label: cmp1\n",
@@ -595,9 +617,16 @@
     "\n",
     "```\n",
     "\n",
-    "{prf:ref}`Slutsky’s theorem <slutsky>` 只是 {prf:ref}`Continuous mapping theorem 2 <cmp2>` 的特殊情况. 由于加法、乘法、除法在现实中单独出现的频率很高, 我们将其列为单独的定理. \n",
+    "{prf:ref}`Slutsky’s theorem <slutsky>` 只是 {prf:ref}`Continuous mapping theorem 2 <cmp2>` 的特殊情况. 由于加法、乘法、除法是现实中最常用的运算, 故将单列为定理. \n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99e70ddb",
+   "metadata": {},
+   "source": [
     "\n",
     "````{prf:theorem} Delta method\n",
     ":label: delta\n",
@@ -645,17 +674,17 @@
     "\n",
     "## 总结\n",
     "\n",
-    "渐进理论是一个既广且深的课题. 在本章中, 我们只触及了一些表面知识. 下一章, 我们将继续探讨如何将渐进理论应用于最小二乘法. \n",
+    "渐进理论是一个既广且深的课题. 在本章中, 我们只触及了一些表面知识. 我们将在下一章继续探讨如何将渐进理论应用于最小二乘法. \n",
     "\n",
     "\n",
     "```{admonition} 历史趣闻\n",
     "\n",
-    "在20世纪80年代之前, 大多数计量经济学家都没有受过严谨的数学训练, 因此无法很好地掌握渐进理论. 在当时, 几位著名的年轻计量经济学家改变了这一局面, 他们拓展了渐进理论在计量经济学中的发展. 其中的佼佼者有 Halbert White (UCSD), Peter C. B.  Phillips (Yale), Peter Robinson (LSE), 仅举几例. \n",
+    "在20世纪80年代之前, 大多数计量经济学家都没有受过严谨的数学训练, 因此无法很好地掌握渐进理论. 在当时, 几位著名的年轻计量经济学家改变了这一局面, 他们拓展了渐进理论在计量经济学中的发展. 其中的佼佼者有 Halbert White (UCSD), Peter C. B.  Phillips (Yale), 以及 Peter Robinson (LSE). \n",
     "```\n",
     "\n",
     "\n",
     "```{admonition} 拓展阅读\n",
-    "Halbert White (1950-2012) 写过一本非常易懂的教科书 (White, 2000, first edition 1984) 向计量经济学家介绍渐进理论. 时至今日, 这本书在经济学研究者和研究生中仍然很受欢迎. 另外, Davidson (1994) 是一本更长、更自成一体的专著. \n",
+    "Halbert White (1950-2012) 写过一本非常易懂的教科书 (White, 2000, first edition 1984) 向计量经济学家介绍渐进理论. 时至今日, 这本书在经济学研究者和研究生中仍然很受欢迎. 另外, Davidson (1994) 是一本更详细、自成一体的专著. \n",
     "\n",
     "```"
    ]
@@ -680,16 +709,12 @@
    "name": "ir"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
    "name": "R",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "pygments_lexer": "r",
+   "version": "4.1.2"
   },
   "vscode": {
    "interpreter": {
