--- a/lecture3-CN.ipynb
+++ b/lecture3-CN.ipynb
@@ -187,18 +187,9 @@
     "-  $\\mathrm{rank}\\left(P_{X}\\right)=K$, \n",
     "  $\\mathrm{rank}\\left(M_{X}\\right)=n-K$.\n",
     "\n",
-    "- 残差: \n",
+    "- 残差: $\\widehat{e}=Y-\\widehat{Y}=Y-X\\widehat{\\beta}=Y-X(X'X)^{-1}X'Y=(I_{n}-P_{X})Y=M_{X}Y.$\n",
     "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "\\widehat{e}&=Y-\\widehat{Y}=Y-X\\widehat{\\beta}=Y-X(X'X)^{-1}X'Y=(I_{n}-P_{X})Y=M_{X}Y\\\\\n",
-    "&=M_{X}\\left(X\\beta+e\\right)=M_{X}e.\n",
-    "\\end{aligned}\n",
-    "$$\n",
-    "\n",
-    "  注意 $\\widehat{e}$ 和 $e$ 是不同的. \n",
-    "\n",
-    "-  $X'\\widehat{e}=X'M_{X}e=0_{K}$.\n",
+    "-  $X'\\widehat{e}=0_{K}$.\n",
     "\n",
     "-  若 $x_{i}$中有一个为常数, 则 $\\sum_{i=1}^{n}\\widehat{e}_{i}=0$. \n",
     "\n",
@@ -229,6 +220,15 @@
    "source": [
     "```\n",
     "We will produce a graph here\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "consider replace this simulation example with a real data example\n",
     "```"
    ]
   },
@@ -293,9 +293,16 @@
     "as.vector( t(X) %*% ehat ) %>% print()\n",
     "MX = diag(n) - X %*% solve( crossprod(X) ) %*% t(X)\n",
     "\n",
-    "data.frame(e = e, ehat = ehat, MXY = MX%*%Y, MXe = MX%*%e ) %>% head()\n",
+    "data.frame(e = e, ehat = ehat, MXY = MX%*%Y ) %>% head()\n",
     "cat(\"The mean of the residual is \", mean(ehat), \".\\n\")\n",
     "cat(\"The mean of the true error term is\", mean(e), \".\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注意到，上例中 $e_i$ 是用来生成 $y_i$ 的扰动项，它和 $\\widehat{e}_i$ 不是一回事。$e_i$ 只是出现在我们的数值模拟当中, 在实际回归中我们只观测到 $(y_i,x_i)$, 而 $e_i$ 无从观测。"
    ]
   },
   {
@@ -307,7 +314,7 @@
     "$\\mathcal{X}=\\left\\{ Xb:b\\in\\mathbb{R}^{K}\\right\\}$ 是一个由 $X=\\left[X_{\\cdot1},\\ldots,X_{\\cdot K}\\right]$ 中的 $K$ 列生成的线性空间; 如果这些列是线性独立的, 那么 $X$ 就是 $K$ 维的. 最小二乘法估计量 $\\widehat \\beta$ 使得 $\\left\\Vert Y-Xb\\right\\Vert$ 最小化. 换言之, $X\\widehat{\\beta}$ 是 $\\mathcal{X}$ 中与 $Y$ 最接近的那个点. \n",
     "\n",
     "\n",
-    "等式 $Y=X\\widehat{\\beta}+\\widehat{e}$ 将 $Y$ 分解为两个垂直向量, $X\\widehat{\\beta}$ 与 $\\widehat{e}$, 因为$\\left\\langle X\\widehat{\\beta},\\widehat{e}\\right\\rangle =\\widehat{\\beta}'X'\\widehat{e}=0_{K}^{\\prime}$, 其中$\\left\\langle \\cdot,\\cdot\\right\\rangle$ 是向量的内积运算. 那么, $X\\widehat{\\beta}$ 就是 $Y$ 在 $\\mathcal{X}$ 上的*投影 (projection)* , $\\widehat{e}$ 则是对应的*投影残差 (projection\n",
+    "等式 $Y=X\\widehat{\\beta}+\\widehat{e}$ 将 $Y$ 分解为两个垂直的分量, $X\\widehat{\\beta}$ 与 $\\widehat{e}$, 因为$\\left\\langle X\\widehat{\\beta},\\widehat{e}\\right\\rangle =\\widehat{\\beta}'X'\\widehat{e}=0_{K}^{\\prime}$, 其中$\\left\\langle \\cdot,\\cdot\\right\\rangle$ 是向量的内积运算. 那么, $X\\widehat{\\beta}$ 就是 $Y$ 在 $\\mathcal{X}$ 上的*投影 (projection)* , $\\widehat{e}$ 则是对应的*投影残差 (projection\n",
     "residuals)*. 根据勾股定理, 自然有\n",
     "\n",
     "$$\n",
@@ -321,7 +328,7 @@
    "source": [
     "## 子向量 (Subvector) \n",
     "\n",
-    "*Frish-Waugh-Lovell (FWL) 定理*是有关最小二乘的子向量的代数性质. 要得到FWL定理, 我们需要分块矩阵求逆的知识. 对称实数正定矩阵\n",
+    "有时候，我们并不关心整个向量 $\\widehat{\\beta}$ 的数值，而是关心某个变量的系数，比如一个子向量 $\\widehat{\\beta}_1$ 的数值. *Frish-Waugh-Lovell (FWL) 定理* 揭示最小二乘法子向量的代数性质. 要得到FWL定理, 我们需要分块矩阵求逆的知识. 对称实数正定矩阵\n",
     "$A=\\begin{pmatrix}A_{11} & A_{12}\\\\\n",
     "A_{12}' & A_{22}\n",
     "\\end{pmatrix}$\n",
