rename the lec4

--- a/lecture4.ipynb
+++ b/lecture4.ipynb
@@ -24,7 +24,7 @@
    "id": "4f9119de",
    "metadata": {},
    "source": [
-    "[Exercise] Two groups, control and treatment. If there are people in the control group and $n-1$ people in the treatment group. What is the consequence?"
+    "[Exercise. don't need to translate yet] Two groups, control and treatment. If there are people in the control group and $n-1$ people in the treatment group. What is the consequence?"
    ]
   },
   {
@@ -32,8 +32,6 @@
    "id": "3f57b5e0",
    "metadata": {},
    "source": [
-    "[copied from the previous lecture]\n",
-    "\n",
     "基于我们已经在前一讲中学习过的线性投影模型\n",
     "\n",
     "$$\n",
