--- a/lecture4-CN.ipynb
+++ b/lecture4-CN.ipynb
@@ -144,7 +144,7 @@
     "$$\n",
     "\n",
     "在此我们使用迹的性质：\n",
-    "$\\mathrm{trace}\\left(AB\\right)=\\mathrm{trace}\\left(BA\\right)$.)\n",
+    "$\\mathrm{trace}\\left(AB\\right)=\\mathrm{trace}\\left(BA\\right)$.\n",
     "\n",
     "根据原假设 $H_{0}:\\beta_{k}=\\beta_{k}^{*}$, \n",
     "$\\beta_{k}^{*}$ 是我们想要检验的值. 我们可以建立一个 $t$统计量\n",
