--- a/lecture4-CN.ipynb
+++ b/lecture4-CN.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 最小二乘: 有限样本理论\n"
+    "# 最小二乘: 有限样本理论\n",
+    "\n",
+    "```{warning}\n",
+    "* 英文标点之后加一个空格\n",
+    "* 英文的冠词\"a\"不一定要翻译出来“一个”。\n",
+    "* marginal distribution 边际分布\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -13,7 +20,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "今天我们继续研究最小二乘法的性质.我们选取有限样本精确分布为学习的主题.它可以很好地被用于统计推断.高斯-马尔可夫理论证明了满足经典假设的OLS的最优性.\n",
+    "今天我们继续研究最小二乘法的性质. 我们选取有限样本精确分布为学习的主题.它可以很好地被用于统计推断. \n",
+    "高斯-马尔可夫理论证明了满足经典假设的OLS的最优性.\n",
     "\n"
    ]
   },
@@ -107,35 +115,42 @@
     "## 有限样本分布\n",
     "\n",
     "我们可以看到有限样本精确分布 $\\widehat{\\beta}$ 假设误差项满足服从分布.\n",
-    "**有限样本分布** 意味着它适用于任何的 $n$; 与之相对的是**渐近分布**, 通过大样本来估计有限样本分布. \n",
-    "首先我们来复习一个正态随机向量的一些通常性质.\n",
+    "**有限样本分布** 意味着它适用于任何的 $n$; 与之相对的是**渐近分布**, 通过大样本来逼近有限样本分布. \n",
+    "首先我们来复习正态随机向量的一些常见性质.\n",
     "\n",
     "<span id=\"fact31\" label=\"fact31\">\\[fact31\\]</span> 令\n",
-    "$z\\sim N\\left(\\mu,\\Omega\\right)$ 作为 $l\\times1$ 的随机向量，伴随有一个正定的方差与协方差矩阵.\n",
-    " 令 $A$ 为\n",
+    "$z\\sim N\\left(\\mu,\\Omega\\right)$ 为 $l\\times1$ 的随机向量，其中 $\\Omega$ 为正定的方差与协方差矩阵.\n",
+    "令 $A$ 为\n",
     "$m\\times l$ 非随机矩阵，其中 $m\\leq l$. 那么\n",
     "$Az\\sim N\\left(A\\mu,A\\Omega A'\\right)$.\n",
     "\n",
-    "<span id=\"fact32\" label=\"fact32\">\\[fact32\\]</span>如果\n",
-    "$z\\sim N\\left(0,1\\right)$, $w\\sim\\chi^{2}\\left(d\\right)$ 和 $z$ 和 $w$\n",
-    "是相互独立的. 那么 $\\frac{z}{\\sqrt{w/d}}\\sim t\\left(d\\right)$.\n",
+    "<span id=\"fact32\" label=\"fact32\">\\[fact32\\]</span>\n",
+    "如果$z\\sim N\\left(0,1\\right)$, $w\\sim\\chi^{2}\\left(d\\right)$, 且 $z$ 和 $w$\n",
+    "相互独立. 那么 $\\frac{z}{\\sqrt{w/d}}\\sim t\\left(d\\right)$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "458acbbf",
+   "metadata": {},
+   "source": [
     "\n",
-    "我么使用最小二乘估计参数\n",
+    "我们使用最小二乘估计参数\n",
     "$$\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'Y=\\left(X'X\\right)^{-1}X'\\left(X'\\beta+e\\right)=\\beta+\\left(X'X\\right)^{-1}X'e,$$\n",
-    "它的条件参数可以被写为： $$\\begin{aligned}\n",
+    "它的条件分布可以被写为： $$\\begin{aligned}\n",
     "\\widehat{\\beta}|X & =\\beta+\\left(X'X\\right)^{-1}X'e|X\\\\\n",
     " & \\sim\\beta+\\left(X'X\\right)^{-1}X'\\cdot N\\left(0_{n},\\gamma I_{n}\\right)\\\\\n",
     " & \\sim N\\left(\\beta,\\gamma\\left(X'X\\right)^{-1}X'X\\left(X'X\\right)^{-1}\\right)\\sim N\\left(\\beta,\\gamma\\left(X'X\\right)^{-1}\\right)\\end{aligned}$$\n",
     "基于\n",
-    "<a href=\"#fact31\" data-reference-type=\"ref\" data-reference=\"fact31\">[fact31]</a>.\n",
-    "k阶系数向量的元素是：\n",
+    "<a href=\"#fact31\" data-reference-type=\"ref\" data-reference=\"fact31\">[fact31]</a>,\n",
+    "$\\hat{\\beta}$ 的第 $k$ 个元素是：\n",
     "$$\\widehat{\\beta}_{k}|X=\\eta_{k}'\\widehat{\\beta}|X\\sim N\\left(\\beta_{k},\\gamma\\eta_{k}'\\left(X'X\\right)^{-1}\\eta_{k}\\right)\\sim N\\left(\\beta_{k},\\gamma\\left[\\left(X'X\\right)^{-1}\\right]_{kk}\\right),$$\n",
-    "其中 $\\eta_{k}=\\left(1\\left\\{ l=k\\right\\} \\right)_{l=1,\\ldots,K}$ 是\n",
-    "k阶元素的选择器.\n",
+    "其中 $\\eta_{k}=\\left(1\\left\\{ l=k\\right\\} \\right)_{l=1,\\ldots,K}$ 用于\n",
+    "选出第 $k$ 个元素.\n",
     "\n",
-    "事实上, $\\sigma^{2}$ 是一个未知的参数, 而且\n",
+    "以上表达式中， $\\gamma$ 是一个未知参数. 我们可以用\n",
     "$$s^{2}=\\widehat{e}'\\widehat{e}/\\left(n-K\\right)=e'M_{X}e/\\left(n-K\\right)$$\n",
-    "是 $\\gamma$ 的一个无偏估计. 因为有 \n",
+    "无偏地估计 $\\gamma$, 其无偏性验证如下: \n",
     "\n",
     "$$\\begin{aligned}\n",
     "E\\left[s^{2}|X\\right] & =\\frac{1}{n-K}E\\left[e'M_{X}e|X\\right]=\\frac{1}{n-K}\\mathrm{trace}\\left(E\\left[e'M_{X}e|X\\right]\\right)\\\\\n",
@@ -143,13 +158,19 @@
     " & =\\frac{1}{n-K}\\mathrm{trace}\\left(M_{X}\\gamma I_{n}\\right)=\\frac{\\gamma}{n-K}\\mathrm{trace}\\left(M_{X}\\right)=\\gamma\\end{aligned}\n",
     "$$\n",
     "\n",
-    "在此我们使用迹的性质：\n",
-    "$\\mathrm{trace}\\left(AB\\right)=\\mathrm{trace}\\left(BA\\right)$.\n",
-    "\n",
-    "根据原假设 $H_{0}:\\beta_{k}=\\beta_{k}^{*}$, \n",
-    "$\\beta_{k}^{*}$ 是我们想要检验的值. 我们可以建立一个 $t$统计量\n",
+    "其中我们使用了迹的性\n",
+    "$\\mathrm{trace}\\left(AB\\right)=\\mathrm{trace}\\left(BA\\right)$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a73caabf",
+   "metadata": {},
+   "source": [
+    "如果 $\\beta_{k}^{*}$ 是我们想要检验的值, 基于\n",
+    "原假设 $H_{0}:\\beta_{k}=\\beta_{k}^{*}$ 我们可以建立相应的 $t$ 统计量\n",
     "$$T_{k}=\\frac{\\widehat{\\beta}_{k}-\\beta_{k}^{*}}{\\sqrt{s^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}},$$\n",
-    "它可以直接用数据计算，因为该统计量当中没有任何的未知数. 当假设成立时, $\\beta_{k}=\\beta_{k}^{*}$ 因此，\n",
+    "该统计量当中没有任何的未知数, 可以直接用数据计算. 当原假设成立时, $\\beta_{k}=\\beta_{k}^{*}$, 因此\n",
     "\n",
     "$$\\begin{aligned}\n",
     "T_{k} & =\\frac{\\widehat{\\beta}_{k}-\\beta_{k}}{\\sqrt{s^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}} \\\\\n",
@@ -158,9 +179,9 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "此时我们引入 $\\sigma^{2}$ 到第二个等式中来帮忙求出分布中最后一个表达式的分子和分母. 分子为\n",
-    "$$\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)/\\sqrt{\\sigma^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}\\sim N\\left(0,1\\right),$$\n",
-    "以及分母\n",
+    "此时我们引入 $\\sigma^{2}=\\gamma$ 到第二个等式中来帮忙求出分布中最后一个表达式的分子和分母. 分子为\n",
+    "$$\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)/\\sqrt{\\sigma^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}\\sim N\\left(0,1\\right);$$\n",
+    "分母\n",
     "$\\sqrt{\\frac{e'}{\\sigma}M_{X}\\frac{e}{\\sigma}/\\left(n-K\\right)}$ 服从\n",
     "$\\sqrt{\\frac{1}{n-K}\\chi^{2}\\left(n-K\\right)}$. 此外, 因为\n",
     "\n",
@@ -180,15 +201,13 @@
     "\\end{bmatrix}\\right)\\end{aligned}\n",
     "$$ \n",
     "\n",
-    "符合方差为0非对角分块阵的联合正态分布, $\\left(\\widehat{\\beta}-\\beta\\right)$ 和\n",
-    "$\\widehat{e}$ 都是统计意义上相互独立的. (这个判断是准确的,\n",
-    "尽管 $\\widehat{e}$ 的协方差矩阵是奇异矩阵.) 给定 $X$ ，并将之视为非随机的参数, 公式\n",
+    "符合方差为0非对角分块阵的联合正态分布, 因此 $(\\widehat{\\beta}-\\beta )$ 和\n",
+    "$\\widehat{e}$ 是相互独立的.  如果我们将 $X$ 视为非随机的, 公式\n",
     "(<a href=\"#eq:t-stat\" data-reference-type=\"ref\" data-reference=\"eq:t-stat\">[eq:t-stat]</a>)\n",
-    "的分子和分母是统计意义上独立的，同时这个公式也是一个函数.因为前者是 $\\left(\\widehat{\\beta}-\\beta\\right)$ 的一个函数，而后者则是 $\\widehat{e}$的一个函数. (另外, 统计意义上独立可以由Basu’s theorem验证得到, 详见附录\n",
-    "<a href=\"#subsec:Basu&#39;s-Theorem\" data-reference-type=\"ref\" data-reference=\"subsec:Basu&#39;s-Theorem\">[subsec:Basu's-Theorem]</a>.)\n",
+    "的分子和分母相互独立. \n",
     "通过\n",
     "<a href=\"#fact32\" data-reference-type=\"ref\" data-reference=\"fact32\">[fact32]</a> 我们可以得到结果 $T_{k}\\sim t\\left(n-K\\right)$.\n",
-    "这使得我们可以进行统计上的推断.\n"
+    "这使得我们可以进行统计推断.\n"
    ]
   },
   {
@@ -200,33 +219,45 @@
     "## 均值和方差<span id=\"mean-and-variance\" label=\"mean-and-variance\">\\[mean-and-variance\\]</span>\n",
     "\n",
     "现在我们放松正态分布假设和统计独立性.\n",
-    "我们用 $Y=X\\beta+e$ 来表示回归模型而且有\n",
-    "$$\\begin{aligned}\n",
+    "我们用 $Y=X\\beta+e$ 来表示回归模型, 并且假设\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
     "E[e|X] & =0_{n}\\\\\n",
-    "\\mathrm{var}\\left[e|X\\right] & =E\\left[ee'|X\\right]=\\sigma^{2}I_{n}.\\end{aligned}$$\n",
-    "其中第一个条件被称为 **均值独立** 假设, 而第二个则被称为 **同方差** 假设. 这些假设就是模型中$e_{i}$基于$x_{i}$的第一阶和第二阶条件 **矩** . 与正态分布假设不同, 它们对 $e_{i}$ 的分布有限制要求.\n",
+    "\\mathrm{var}\\left[e|X\\right] & =E\\left[ee'|X\\right]=\\sigma^{2}I_{n}.\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "其中第一个条件被称为 **均值独立** 假设, 而第二个则被称为 **同方差** 假设. \n",
+    "与正态分布假设不同, 它们对 $e_{i}$ 的分布没有限制.\n",
+    "而只是限制了给定 $x_{i}$ 后 $e_{i}$ 的一阶矩和二阶矩. \n",
+    "这两个条件下，我们可以得到如下性质.\n",
     "\n",
     "-  无偏性: $$\\begin{aligned}\n",
     "    E\\left[\\widehat{\\beta}|X\\right] & =E\\left[\\left(X'X\\right)^{-1}XY|X\\right]=E\\left[\\left(X'X\\right)^{-1}X\\left(X'\\beta+e\\right)|X\\right]\\\\\n",
     "     & =\\beta+\\left(X'X\\right)^{-1}XE\\left[e|X\\right]=\\beta.\\end{aligned}$$\n",
     "    根据期望迭代法则, 无条件期望为\n",
     "    $E\\left[\\widehat{\\beta}\\right]=E\\left[E\\left[\\widehat{\\beta}|X\\right]\\right]=\\beta.$\n",
-    "    无偏性不需要基于同方差的假设.\n",
+    "    无偏性不依赖同方差假设.\n",
     "\n",
-    "-   方差:\n",
-    "-   \n",
-    "    $$\\begin{aligned}\\mathrm{var}\\left[\\widehat{\\beta}|X\\right] & =E\\left[\\left(\\widehat{\\beta}-E\\widehat{\\beta}\\right)\\left(\\widehat{\\beta}-E\\widehat{\\beta}\\right)'|X\\right]\\\\\n",
+    "-   因为 $\\hat{\\beta}$ 的方差是\n",
+    "   \n",
+    "    $$\n",
+    "    \\begin{aligned}\\mathrm{var}\\left[\\widehat{\\beta}|X\\right] & =E\\left[\\left(\\widehat{\\beta}-E\\widehat{\\beta}\\right)\\left(\\widehat{\\beta}-E\\widehat{\\beta}\\right)'|X\\right]\\\\\n",
     "     & =E\\left[\\left(\\widehat{\\beta}-\\beta\\right)\\left(\\widehat{\\beta}-\\beta\\right)'|X\\right]\\\\\n",
     "     & =E\\left[\\left(X'X\\right)^{-1}X'ee'X\\left(X'X\\right)^{-1}|X\\right]\\\\\n",
-    "     & =\\left(X'X\\right)^{-1}X'E\\left[ee'|X\\right]X\\left(X'X\\right)^{-1}\n",
-    "    \\end{aligned}$$ \n",
+    "     & =\\left(X'X\\right)^{-1}X'E\\left[ee'|X\\right]X\\left(X'X\\right)^{-1}.\n",
+    "    \\end{aligned}\n",
+    "    $$ \n",
     "    \n",
+    "    因此同方差假设可将其简化为\n",
     "\n",
-    "-   在同方差的假设下, 它可以被简化为\n",
-    "    $$\\begin{aligned}\\mathrm{var}\\left[\\widehat{\\beta}|X\\right] & =\\left(X'X\\right)^{-1}X'\\left(\\sigma^{2}I_{n}\\right)X\\left(X'X\\right)^{-1}\\\\\n",
+    "    $$\n",
+    "    \\begin{aligned}\\mathrm{var}\\left[\\widehat{\\beta}|X\\right] & =\\left(X'X\\right)^{-1}X'\\left(\\sigma^{2}I_{n}\\right)X\\left(X'X\\right)^{-1}\\\\\n",
     "     & =\\sigma^{2}\\left(X'X\\right)^{-1}X'I_{n}X\\left(X'X\\right)^{-1}\\\\\n",
     "     & =\\sigma^{2}\\left(X'X\\right)^{-1}.\n",
-    "    \\end{aligned}$$\n"
+    "    \\end{aligned}\n",
+    "    $$\n"
    ]
   },
   {
@@ -234,6 +265,9 @@
    "id": "18a14af6",
    "metadata": {},
    "source": [
+    "···\n",
+    "set an example environment\n",
+    "···\n",
     "\n",
     "(异方差) 如果 $e_{i}=x_{i}u_{i}$, 其中 $x_{i}$ 是一个标量的随机变量, $u_{i}$ 独立于 $x_{i}$,\n",
     "$E\\left[u_{i}\\right]=0$ 和 $E\\left[u_{i}^{2}\\right]=\\sigma_{u}^{2}$.\n",
@@ -241,15 +275,44 @@
     "$E\\left[e_{i}|x_{i}\\right]=E\\left[x_{i}u_{i}|x_{i}\\right]=x_{i}E\\left[u_{i}|x_{i}\\right]=0$\n",
     "但是\n",
     "$E\\left[e_{i}^{2}|x_{i}\\right]=E\\left[x_{i}^{2}u_{i}^{2}|x_{i}\\right]=x_{i}^{2}E\\left[u_{i}^{2}|x_{i}\\right]=\\sigma_{u}^{2}x_{i}^{2}$\n",
-    "是 $x_{i}$ 的一个函数. 我们认为 $e_{i}^{2}$ 是一个异方差的误差项.\n",
+    "是 $x_{i}$ 的函数, 因此 $e_{i}^{2}$ 是一个异方差误差项.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "614025dc",
+   "metadata": {
+    "collapsed": false,
+    "inputHidden": false,
+    "outputHidden": false,
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "n = 100\n",
+    "beta0 = matrix(c(0,1, 1), ncol = 1)\n",
     "\n",
-    "\\*\\*knitr\\*\\*\n",
+    "X = cbind(rnorm(n), rpois(n, 3) )\n",
+    "e = X[,1] * rnorm(n)  # the source of heteroskedasticity\n",
     "\n",
-    "我们需要意识到独立性和样本同分布 (iid) $\\left(y_{i},x_{i}\\right)$ 不能得出同方差.\n",
-    "同方差还是异方差是取决于一次观察中\n",
-    "$\\left(x_{i},e_{i}=y_{i}-\\beta x\\right)$ 的关系, 然而独立同分布\n",
-    "iid 是关于 $\\left(y_{i},x_{i}\\right)$ 和\n",
-    "$\\left(y_{j},x_{j}\\right)$ （$i\\neq j$）在整个观察中的关系.\n"
+    "y = cbind(1, X ) %*% beta0 + e\n",
+    "plot( y = e, x = X[,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9acd240",
+   "metadata": {},
+   "source": [
+    "\n",
+    "$\\left(y_{i},x_{i}\\right)$ 独立同分布 (independently and identically distributed， 简记为 iid)  并不能得出 $e_i$ 同方差.\n",
+    "同方差还是异方差是取决于单次观测中\n",
+    "$\\left(x_{i},e_{i}=y_{i}-\\beta x\\right)$ 联合分布的内部关系, \n",
+    "然而独立同分布与否取决于样本中不同次观测 $\\left(y_{i},x_{i}\\right)$ 和\n",
+    "$\\left(y_{j},x_{j}\\right)$ （$i\\neq j$）之间的关系.\n"
    ]
   },
   {
@@ -260,29 +323,47 @@
     "\n",
     "## 高斯-马尔可夫定理\n",
     "\n",
-    "高斯-马尔可夫定理（Gauss-Markov theorem）是关于OLS的最优化的一个定理. 它证明了OLS是所有线性无偏估计中最有效的估计量.\n",
-    "这里的 **有效** 指的是它在所有估计量中有最小的方差. \n",
-    "在\n",
-    "$E\\left[\\widehat{\\beta}\\right]=\\beta$ 中我们已经证明过OLS是无偏的. 无偏线性估计量五花八门. 比如, $\\left(Z'X\\right)^{-1}Z'y$ (\n",
+    "高斯-马尔可夫定理（Gauss-Markov theorem）是关于OLS的有效\n",
+    "的定理. 这里的 **有效** 指的是它在所有线性无偏估计量中方差最小.\n",
+    "\n",
+    "无偏线性估计量五花八门. 比如, $\\left(Z'X\\right)^{-1}Z'y$ (\n",
     "$z_{i}=x_{i}^{2}$) 是无偏的，因为它满足\n",
     "$E\\left[\\left(Z'X\\right)^{-1}Z'y\\right]=E\\left[\\left(Z'X\\right)^{-1}Z'\\left(X\\beta+e\\right)\\right]=\\beta$.\n",
-    "我们不能断定OLS比其他的无偏估计量更好因为它们都是无偏的 — 在这个方面它们都是一致的. 所以我们只能把目光放到第二个特性方差上：如果一个估计量的方差更小，那么我们认为这个估计量比其他的更好. \n",
+    "我们也已经通过 $E\\left[\\widehat{\\beta}\\right]=\\beta$ 证明了OLS是无偏的. \n",
+    "从无偏性这个角度来讲，它们一样好.\n",
+    "我们只能把目光转到第二个特性方差上面：如果一个估计量的方差更小，则认为这个估计量比其他的更好. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "287c9ac7",
+   "metadata": {},
+   "source": [
+    "```{warning}\n",
+    "separate it out as a remark\n",
     "\n",
-    "如果有两个一般性的随机变量 $X$ 和 $Y$， 且他们的样本数相同，如果\n",
-    "$\\left(\\Omega_{Y}-\\Omega_{X}\\right)$ 是一个半正定矩阵，我们认为\n",
+    "对于两个随机变量 $X$ 和 $Y$， 如果其方差之差\n",
+    "$\\left(\\Omega_{Y}-\\Omega_{X}\\right)$ 是个半正定矩阵，则称\n",
     "$X$ 的方差小于等于 $Y$ 的方差.\n",
     "我们选择通过这种方式比较是因为对于任意非零常数向量 $c$, $X$的线性组合的方差不大于 $Y$ 的相同线性组合的方差.\n",
     "$$\\mathrm{var}\\left(c'X\\right)=c'\\Omega_{X}c\\leq c'\\Omega_{Y}c=\\mathrm{var}\\left(c'Y\\right)$$\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61a1148f",
+   "metadata": {},
+   "source": [
     "\n",
-    "\n",
-    "令 $\\tilde{\\beta}=A'y$ 作为一个一般性的线性估计量, 其中 $A$ 是一个 $X$ 的任意一个\n",
-    "$n\\times K$ 函数. 有\n",
+    "令 $\\tilde{\\beta}=A'y$ 为一个线性估计量, 其中 $n\\times K$ 矩阵 $A$ 可以是 $X$ 的某个函数. \n",
+    "有\n",
     "$$E\\left[A'y|X\\right]=E\\left[A'\\left(X\\beta+e\\right)|X\\right]=A'X\\beta.$$\n",
-    "所以 $\\tilde{\\beta}$ 的线性和无偏性表明了\n",
-    "$A'X=I_{n}$. 而且，方差满足\n",
+    "$\\tilde{\\beta}$ 的线性和无偏性要求\n",
+    "$A'X=I_{n}$. 其方差满足\n",
     "\n",
     "$$\n",
-    "var\\left(A'y|X\\right)=E\\left[\\left(A'y-\\beta\\right)\\left(A'y-\\beta\\right)'|X\\right]=E\\left[A'ee'A|X\\right]=\\sigma^{2}A'A.\n",
+    "\\mathrm{var}\\left(A'y|X\\right)=E\\left[\\left(A'y-\\beta\\right)\\left(A'y-\\beta\\right)'|X\\right]=E\\left[A'ee'A|X\\right]=\\sigma^{2}A'A.\n",
     "$$\n",
     "\n",
     "令 $C=A-X\\left(X'X\\right)^{-1}.$\n",
@@ -297,13 +378,13 @@
     "\n",
     "其中最后一个等式有:\n",
     "$$\\left(X'X\\right)^{-1}X'C=\\left(X'X\\right)^{-1}X'\\left(A-X\\left(X'X\\right)^{-1}\\right)=\\left(X'X\\right)^{-1}-\\left(X'X\\right)^{-1}=0.$$\n",
-    "因此得到 $A'A-\\left(X'X\\right)^{-1}$ 是一个半正定矩阵. 任意 $\\tilde{\\beta}$ 的方差都不小于 OLS\n",
-    "估计量的方差 $\\widehat{\\beta}$. 上述推导表明了 OLS 在所有的线性无偏估计量中达到了最小的方差.\n",
+    "因此得到 $A'A-\\left(X'X\\right)^{-1}$ 是个半正定矩阵. 任意 $\\tilde{\\beta}$ 的方差都不可能小于 OLS\n",
+    "估计量的方差 $\\widehat{\\beta}$. 上述推导表明了 OLS 在所有的线性无偏估计量中达到了最小方差.\n",
     "\n",
-    "同方差是一个严格的假设. 在同方差假设下,\n",
+    "同方差是一个严苛的假设. 在同方差假设下,\n",
     "$\\mathrm{var}\\left[\\widehat{\\beta}\\right]=\\sigma^{2}\\left(X'X\\right)^{-1}$.\n",
     "常见的估计量 $\\sigma^{2}$ 是残差的样本均值，即\n",
-    "$\\widehat{\\sigma}^{2}=\\frac{1}{n}\\widehat{e}'\\widehat{e}$ 或者无偏的表达式为 $s^{2}=\\frac{1}{n-K}\\widehat{e}'\\widehat{e}$. 当存在异方差时, 高斯-马尔可夫定理并不适用.\n"
+    "$\\widehat{\\sigma}^{2}=\\frac{1}{n}\\widehat{e}'\\widehat{e}$ 或者无偏的表达式为 $s^{2}=\\frac{1}{n-K}\\widehat{e}'\\widehat{e}$. 当存在异方差时, 高斯-马尔可夫定理不适用.\n"
    ]
   },
   {
@@ -314,14 +395,16 @@
     "\n",
     "## 总结\n",
     "\n",
-    "基于误差项正态分布假设的精确分布是经典的统计学模型. 高斯-马尔可夫定理成立要基于两个关键的假设：线性的条件期望函数（CEF）和同方差.\n",
+    "经典的数理统计推导基于误差项正态分布下在精确分布. 高斯-马尔可夫定理成立要基于两个关键的假设：线性的条件期望函数（CEF）和同方差.\n",
     "\n",
-    "**Historical notes**: MLE 由 Ronald Fisher (1890–1962)发明并发展为世人所了解. 他是频率学派研究方法的主要贡献者之一.\n",
+    "**This historical note comes from an earlier version**\n",
+    "\n",
+    "**Historical notes**: 极大似然估计由 Ronald Fisher (1890–1962) 是频率学派的奠基人.\n",
     "这些研究方法时至今日还占据着主流地位, 同时他尖锐地批评了贝叶斯学派的研究方法. Fisher 在他1936年的生物学研究中，搜集了一个150个样本\n",
     "的鸢尾花数据组，在R软件中输入指令`iris`就能看到相应的展示. 许多在经典数学统计中的概念都是由Fisher发明的，\n",
     "比如充分统计量，辅助统计量，完备性和指数族等等.\n",
     "\n",
-    "**Further reading**: @phillips1983exact 提供了一个计量经济学理论中便于理解的精确小样本理论的版本. 在这之后，计量经济学的理论研究转向了大样本理论，我们将会在下一章介绍.\n"
+    "**Further reading**: @phillips1983exact 总结了计量经济学理论的精确小样本理论结果. 在这之后，计量经济学的理论研究转向了大样本理论. \n"
    ]
   },
   {
@@ -400,8 +483,18 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.1.2"
   }
  },
  "nbformat": 4,
