fix equation problems

--- a/lecture4-CN.ipynb
+++ b/lecture4-CN.ipynb
@@ -128,25 +128,51 @@
    "source": [
     "\n",
     "我们使用最小二乘估计参数\n",
-    "$$\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'Y=\\left(X'X\\right)^{-1}X'\\left(X'\\beta+e\\right)=\\beta+\\left(X'X\\right)^{-1}X'e,$$\n",
-    "\\\\它的条件分布可以被写为： $$\\begin{aligned}\n",
+    "\n",
+    "$$\n",
+    "\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'Y=\\left(X'X\\right)^{-1}X'\\left(X'\\beta+e\\right)=\\beta+\\left(X'X\\right)^{-1}X'e,\n",
+    "$$\n",
+    "\n",
+    "它的条件分布可以被写为： \n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
     "\\widehat{\\beta}|X & =\\beta+\\left(X'X\\right)^{-1}X'e|X\\\\\n",
     " & \\sim\\beta+\\left(X'X\\right)^{-1}X'\\cdot N\\left(0_{n},\\gamma I_{n}\\right)\\\\\n",
-    " & \\sim N\\left(\\beta,\\gamma\\left(X'X\\right)^{-1}X'X\\left(X'X\\right)^{-1}\\right)\\sim N\\left(\\beta,\\gamma\\left(X'X\\right)^{-1}\\right)\\end{aligned}$$\n",
+    " & \\sim N\\left(\\beta,\\gamma\\left(X'X\\right)^{-1}X'X\\left(X'X\\right)^{-1}\\right)\\sim N\\left(\\beta,\\gamma\\left(X'X\\right)^{-1}\\right)\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
     "基于\n",
     "<a href=\"#fact31\" data-reference-type=\"ref\" data-reference=\"fact31\">[fact31]</a>, $\\hat{\\beta}$  的第 $k$ 个元素是：\n",
-    "$$\\widehat{\\beta}_{k}|X=\\eta_{k}'\\widehat{\\beta}|X\\sim N\\left(\\beta_{k},\\gamma\\eta_{k}'\\left(X'X\\right)^{-1}\\eta_{k}\\right)\\sim N\\left(\\beta_{k},\\gamma\\left[\\left(X'X\\right)^{-1}\\right]_{kk}\\right),$$\n",
-    "其中 $$\\eta_{k}=\\left(1\\left\\{ l=k\\right\\} \\right)_{l=1,\\ldots,K}$$ 用于\n",
-    "选出第 $k$ 个元素。\n",
     "\n",
-    "以上表达式中， $\\gamma$ 是一个未知参数。 我们可以用\n",
-    "$$s^{2}=\\widehat{e}'\\widehat{e}/\\left(n-K\\right)=e'M_{X}e/\\left(n-K\\right)$$\\\\\n",
-    "无偏地估计 $\\gamma$ , 其无偏性验证如下: \n",
+    "$$\n",
+    "\\widehat{\\beta}_{k}|X=\\eta_{k}'\\widehat{\\beta}|X\\sim N\\left(\\beta_{k},\\gamma\\eta_{k}'\\left(X'X\\right)^{-1}\\eta_{k}\\right)\\sim N\\left(\\beta_{k},\\gamma\\left[\\left(X'X\\right)^{-1}\\right]_{kk}\\right),\n",
+    "$$\n",
     "\n",
-    "$$\\begin{aligned}\n",
+    "其中 \n",
+    "\n",
+    "$$\n",
+    "\\eta_{k}=\\left(1\\left\\{ l=k\\right\\} \\right)_{l=1,\\ldots,K}\n",
+    "$$ \n",
+    "\n",
+    "用于选出第 $k$ 个元素。\n",
+    "\n",
+    "以上表达式中， $\\gamma$ 是一个未知参数。 \n",
+    "我们可以用\n",
+    "\n",
+    "$$\n",
+    "s^{2}=\\widehat{e}'\\widehat{e}/\\left(n-K\\right)=e'M_{X}e/\\left(n-K\\right)\n",
+    "$$\n",
+    "\n",
+    "无偏地估计 $\\gamma$, 其无偏性验证如下: \n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
     "E\\left[s^{2}|X\\right] & =\\frac{1}{n-K}E\\left[e'M_{X}e|X\\right]=\\frac{1}{n-K}\\mathrm{trace}\\left(E\\left[e'M_{X}e|X\\right]\\right)\\\\\n",
     " & =\\frac{1}{n-K}\\mathrm{trace}\\left(E\\left[M_{X}ee'|X\\right]\\right)=\\frac{1}{n-K}\\mathrm{trace}\\left(M_{X}E\\left[ee'|X\\right]\\right)\\\\\n",
-    " & =\\frac{1}{n-K}\\mathrm{trace}\\left(M_{X}\\gamma I_{n}\\right)=\\frac{\\gamma}{n-K}\\mathrm{trace}\\left(M_{X}\\right)=\\gamma\\end{aligned}\n",
+    " & =\\frac{1}{n-K}\\mathrm{trace}\\left(M_{X}\\gamma I_{n}\\right)=\\frac{\\gamma}{n-K}\\mathrm{trace}\\left(M_{X}\\right)=\\gamma\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "其中我们使用了迹的性质\n",
@@ -160,11 +186,16 @@
    "source": [
     "如果 $\\beta_{k}^{*}$ 是我们想要检验的值, 基于\n",
     "原假设 $H_{0}:\\beta_{k}=\\beta_{k}^{*}$ 我们可以建立相应的 $t$ 统计量\n",
-    "$$T_{k}=\\frac{\\widehat{\\beta}_{k}-\\beta_{k}^{*}}{\\sqrt{s^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}},$$\n",
+    "\n",
+    "$$\n",
+    "T_{k}=\\frac{\\widehat{\\beta}_{k}-\\beta_{k}^{*}}{\\sqrt{s^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}},\n",
+    "$$\n",
+    "\n",
     "该统计量当中没有任何的未知数, 可以直接用数据计算. \n",
     "当原假设成立时, $\\beta_{k}=\\beta_{k}^{*}$ , 因此\n",
     "\n",
-    "$$\\begin{aligned}\n",
+    "$$\n",
+    "\\begin{aligned}\n",
     "T_{k} & =\\frac{\\widehat{\\beta}_{k}-\\beta_{k}}{\\sqrt{s^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}} \\\\\n",
     " & =\\frac{\\widehat{\\beta}_{k}-\\beta_{k}}{\\sqrt{\\sigma^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}}\\cdot\\frac{\\sqrt{\\sigma^{2}}}{\\sqrt{s^{2}}} \\\\\n",
     " & =\\frac{\\left(\\widehat{\\beta}_{k}-\\beta_{0,k}\\right)/\\sqrt{\\sigma^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}}{\\sqrt{\\frac{e'}{\\sigma}M_{X}\\frac{e}{\\sigma}/\\left(n-K\\right)}},\n",
@@ -173,10 +204,15 @@
     "\n",
     "此时我们引入 $\\sigma^{2}=\\gamma$ 到第二个等式中来帮忙求出分布中最后一个表达式的分子和分母。 \n",
     "分子为\n",
-    "$$\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)/\\sqrt{\\sigma^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}\\sim N\\left(0,1\\right);$$\n",
+    "\n",
+    "$$\n",
+    "\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)/\\sqrt{\\sigma^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}\\sim N\\left(0,1\\right);\n",
+    "$$\n",
+    "\n",
     "分母 $\\sqrt{\\frac{e'}{\\sigma}M_{X}\\frac{e}{\\sigma}/\\left(n-K\\right)}$ \n",
-    "服从$\\sqrt{\\frac{1}{n-K}\\chi^{2}\\left(n-K\\right)}$ . \n",
+    "服从$\\sqrt{\\frac{1}{n-K}\\chi^{2}\\left(n-K\\right)}$. \n",
     "此外, 因为\n",
+    "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "\\begin{bmatrix}\\widehat{\\beta}-\\beta\\\\\n",
@@ -469,16 +505,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9e56aae5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": {
@@ -487,7 +527,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "R",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
