--- a/lecture4-CN.ipynb
+++ b/lecture4-CN.ipynb
@@ -5,7 +5,7 @@
    "id": "d1733900",
    "metadata": {},
    "source": [
-    "# 最小二乘: 有限样本理论"
+    "# 最小二乘法: 有限样本理论"
    ]
   },
   {
@@ -545,9 +545,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": {
@@ -556,7 +556,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "R",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
